--- a/vol1/01-05.md
+++ b/vol1/01-05.md
@@ -163,10 +163,10 @@
 
 “雨宫你来当学级委员？”
 
-“是‘制造气氛’——总之，这份气氛需要达到确保我在明天的HR上发言之前没有人自我推荐的地步。必要的话，你也可以在回宿舍之后和同学提起这个事。”
+“是‘制造气氛’——总之，这份气氛需要达到确保在我发言之前没有人自我推荐的地步。必要的话，你也可以在回宿舍之后和同学提起这个事。”
 
 “明白了。那之后要怎么做？”
 
 “之后的话就……”
 
-随后，我对工藤讲出了明天自己准备在HR上实行的计划。
+随后，我对工藤讲出了自己准备实行的计划。
