--- a/vol1/01-06.md
+++ b/vol1/01-06.md
@@ -2,7 +2,7 @@
 
 “那么，昨天我也说过了，今天要决定各个委员的人选。先从学级委员开始。”
 
-HR一开始，菅田老师就对着整个教室说道。
+第三节课。讲完了这一学年的大致要点后，菅田老师对着整个教室说道。
 
 我看向黑板上方的时钟，确认秒针的位置后，闭上眼睛开始在脑海中计数。
 
@@ -94,25 +94,57 @@ HR一开始，菅田老师就对着整个教室说道。
 
 其他委员职位的推选已经开始。我又一次看向时钟，闭上眼睛，在脑海中重新开始计数。
 
-二五、二六、二七、二八、二九。
+六七、六八、六九、七零、七一。
 
 耳边时不时听到推荐某位同学的发言，随后便有掌声响起。
 
-一六六、一六七、一六八、一六九、一七零。
+二四三、二四四、二四五、二四六、二四七。
 
 各个委员的人选被逐一决定。
 
-二四三、二四四、二四五、二四六、二四七。
+四四九、四五零、四五一、四五二、四五三。
 
 不过，这一切已与我再无关联。
 
-二九六、二九七、二九八、二九九、三百。
+五九六、五九七、五九八、五九九、六百。
 
 “那么所有的委员职位都决定好了。接下来的一年，还请同学们多多努力。”
 
-菅田老师进行了总结发言。我睁开双眼，宣示班会结束的铃声恰好于此刻响起。
+菅田老师进行了总结发言。我睁开双眼，下课铃声恰好于此刻响起。
+
+&emsp;
+
+【Toshio_K：森山同学刚才找到我，说中午想和我一起吃饭。】
+
+我趁着下课休息走出教室，在走廊尽头的窗边停下。这时，手机上显示出工藤发送过来的消息。
+
+【MSK：这么快的？还不错嘛。】
+
+【Toshio_K：我有点虚啊。如果她问我刚才的事情，我要怎么应对？】
+
+我思考了一下，随后在手机上回复。
+
+【MSK：把整件事的原委以及昨晚我拟定的计划老老实实地讲出来。】
+
+【Toshio_K：雨宫你是不是疯了？】
+
+【MSK：恋爱的基础是信任。这种见不得光的手段瞒得了一时，可瞒不了一世。】
+
+【MSK：而且刚才你应该也看到森山同学的反应了。相比我，你算是她能接受的那一类。】
+
+【MSK：她十有八九是个颜值爱好者。到时候就靠你那张脸混过去。】
+
+【Toshio_K：……行吧。不好意思让你受累了。】
+
+【MSK：无所谓，你那边顺利就好。我去个卫生间，过会回教室。】
+
+发完最后一条信息，我收起手机。
+
+随后我将双手在胸前交叉，保持略微低着头的姿势向卫生间走去，全然不顾周围的喧嚣。
 
 ——**热闹是他们的，我什么都没有**。
+
+——**我只要做一个四处飘荡的亡魂就好**。
 
 ——**现在这样，对我已经足够了**。
 
@@ -125,6 +157,3 @@ HR一开始，菅田老师就对着整个教室说道。
 那是一个耳熟能详却又陌生至极的声音——不，我知道那是谁的声音。
 
 那是<ruby><rb>**我**</rb><rt>わたし</rt></ruby>的声音。
-
-&emsp;
-
