--- a/vol1/01-07.md
+++ b/vol1/01-07.md
@@ -50,7 +50,7 @@
 
 封面是一个梳着两条如猫尾巴般的长麻花辫，手持一本红色封皮的书籍的女孩子。女孩子的两侧，以工整的字体写着书名。
 
-La "Fille du Livre" et l'esprit affamé.
+"La Fille du Livre" et l'esprit affamé.
 
 我飞速解锁手机，在wiki上检索“Fille du Livre”这个关键词，随后开始阅读搜索结果指向的页面。
 
@@ -66,4 +66,44 @@ La "Fille du Livre" et l'esprit affamé.
 
 难道我刚才的动作被学姐看穿了吗？我好不容易才用自己刚记住的知识覆盖掉这个疑问，随后小心翼翼地回答：
 
-“是津岛老师的那本代表作对吧？”
+“是津岛先生的《La Déchéance d'un Homme》对吧？”
+
+学姐露出了赞许的表情回答：
+
+“没错。但是当我阅读这部作品的第二卷时，那种‘觉得故事很出色，角色刻画的也很到位’的感觉消失了——尤其是当将这一卷和它的原型《Les Hauts de Hurlevent》放在一起对比的时候。”
+
+“是因为故事与其中的角色，相比原型作品发生了‘错位’吗？”
+
+这一次，学姐没有回答我的问题，而是将手中的书放下，又拿起放在一边的那本书——应该就是《Les Hauts de Hurlevent》了——继续说道：
+
+“《Les Hauts de Hurlevent》是其作者艾米莉女士出版的唯一一部作品。当时她和她的姐妹们——夏洛蒂和安妮决定各自创作一本小说。她们写作的动机并非‘讲述故事’，而是完完全全的经济因素。”
+
+“经济因素？”
+
+“她们的兄弟博朗威尔——也是兄弟姐妹中的独生子，是个非常不成器的人。根据那个时候的遗产继承原则，她们一家的财产将会全部由这个兄弟继承。如果雨宫同学你读过简女士的作品，应该能找到类似的例子。”
+
+“比如《Orgueil et Préjugés》？”
+
+平心而论，我对这位女作家的了解，也仅限于这本恋爱小说而已。
+
+“对。回到正题，为了避免陷入一无分文的窘迫境地，三姐妹决定各写一本小说，靠版税收入维持以后的生活——最先获得成功的，是长姐夏洛蒂的作品。”
+
+不用渡边学姐多提，我也知道说的是哪一部——那个女人的书架上就收藏有这部小说的英文版精装本，旁边还放了1944版的DVD盒子。
+
+“讽刺的是，在夏洛蒂的小说大获成功后，博朗威尔反而陷入了精神上进一步崩溃的境地——因为他无法接受自己的姐妹们有着比自己更出色的才能。甚至后世的研究者中，也有一些人提出不着边际的论调——认为三姐妹的小说实际上是博朗威尔写的。”
+
+渡边学姐停了一下，继续讲了下去：
+
+“前几年BBC出过一部以三姐妹所在的家族为主题的纪录片。我最不能接受的，就是这一纪录片的时间线直到博朗威尔去世为止，全然不顾夏洛蒂在这之后又活了多年的事实——简直就像是说三姐妹的人生都只是围绕博朗威尔而存在一般。都21世纪了，这帮人的思想却像是还停留在19世纪。”
+
+“这种对女性创作者的偏见还真够无耻的。”
+
+“没错吧？每当人们发现一本畅销书的作者是女性的时候，就会对这位女作家挑三拣四，冷嘲热讽。同样的情况，在男性创作者身上几乎完全消失了。”
+
+“渡边学姐的话，倒是让我想到津岛先生的知名作品《Le Soleil Couchant》。很多评论家认为这部作品对女主人公的描写精致到完全不像一个男性创作者的手笔，不过其实——”
+
+“你想说的内容，我在《Au clair》这本回忆录里面看过。”
+
+学姐似乎看穿了我听到她的话而露出的惊诧神情。
+
+“”
