--- a/vol1/01-07.md
+++ b/vol1/01-07.md
@@ -94,7 +94,7 @@
 
 渡边学姐停了一下，继续讲了下去：
 
-“前几年BBC出过一部以三姐妹所在的家族为主题的纪录片。我最不能接受的，就是这一纪录片的时间线直到博朗威尔去世为止，全然不顾夏洛蒂在这之后又活了多年的事实——简直就像是说三姐妹的人生都只是围绕博朗威尔而存在一般。都21世纪了，这帮人的思想却像是还停留在19世纪。”
+“前几年BBC出过一部以三姐妹所在的家族为主题的纪录片。我最不能接受的，就是这一纪录片的时间线只到博朗威尔去世为止，全然不顾夏洛蒂在这之后又活了多年的事实——简直就像是说三姐妹的人生都只是围绕博朗威尔而存在一般。都21世纪了，这帮人的思想却像是还停留在19世纪。”
 
 “这种对女性创作者的偏见还真够无耻的。”
 
