--- a/vol1/01-07.md
+++ b/vol1/01-07.md
@@ -98,7 +98,7 @@
 
 “这种对女性创作者的偏见还真够无耻的。”
 
-“没错吧？每当人们发现一本畅销书的作者是女性的时候，就会对这位女作家挑三拣四，冷嘲热讽。同样的情况，在男性创作者身上几乎完全消失了。”
+“没错吧？每当人们发现一本畅销书的作者是女性的时候，就会对这位女作家挑三拣四，冷嘲热讽。而同样的情况，完全不会落到男性创作者身上。”
 
 “渡边学姐的话，倒是让我想到津岛先生的知名作品《Le Soleil Couchant》。很多评论家认为这部作品对女主人公的描写精致到完全不像一个男性创作者的手笔，不过其实——”
 
