--- a/vol1/01-07.md
+++ b/vol1/01-07.md
@@ -106,4 +106,6 @@
 
 学姐似乎看穿了我听到她的话而露出的惊诧神情。
 
-“”
+“我以前还看过以津岛先生为主角的一部电影，里面完整描述了津岛先生请求自己的仰慕者为自己写一本日记作为《Le Soleil Couchant》的创作素材，与此同时让她怀上自己的孩子的过程。顺带一提，津岛先生当时的另一位情妇——最后和他一起投水殉情的那位——听说两人女儿出生的事情的时候的反应嘛……”
+
+“我记得津岛先生当时是已婚吧？那这位情妇的心态岂不是崩了？正妻和崇拜者都有孩子，唯独自己没有？”
