--- a/vol1/01-07.md
+++ b/vol1/01-07.md
@@ -106,6 +106,40 @@
 
 学姐似乎看穿了我听到她的话而露出的惊诧神情。
 
-“我以前还看过以津岛先生为主角的一部电影，里面完整描述了津岛先生请求自己的仰慕者为自己写一本日记作为《Le Soleil Couchant》的创作素材，与此同时让她怀上自己的孩子的过程。顺带一提，津岛先生当时的另一位情妇——最后和他一起投水殉情的那位——听说两人女儿出生的事情的时候的反应嘛……”
+“我还看过以津岛先生为主角的一部电影，里面完整描述了津岛先生请求那位仰慕者为自己写一本日记作为《Le Soleil Couchant》的创作素材，作为交换，让她怀上自己的孩子的过程。顺带一提，津岛先生当时正在交往的那位情妇，听说私生女出生一事时的反应嘛……”
 
-“我记得津岛先生当时是已婚吧？那这位情妇的心态岂不是崩了？正妻和崇拜者都有孩子，唯独自己没有？”
+“如果我的记忆没错，津岛先生当时是已婚吧？那这位情妇的心态岂不是崩了？正妻和崇拜者都有孩子，唯独自己没有？”
+
+“电影里的确是这么表现的。”
+
+我猜的倒还够准——不过这终究得益于我在长期被那个女人拖去参加她与闺蜜们聚餐的经验中得来的知识。
+
+“渡边学姐，容我提出一个大胆的猜测。津岛先生的情妇最终和他一起投水自尽，是否也和这种心态崩塌有关？”
+
+“这个我就不太清楚了。嘛，我们是不是把话题扯的有点远了？刚才讲到哪来着？”
+
+“学姐手上的这两本书，《Fille du Livre》的第二卷和艾米莉的《Les Hauts de Hurlevent》。”
+
+“哦对，我差点忘了。我在读了一遍《Fille du Livre》的第二卷之后，又重新读了一遍作为原型作品的《Les Hauts de Hurlevent》。然而在读的时候，我发现这部作品存在一些难以忽视的缺陷。”
+
+“缺陷？”
+
+“最大的问题在于，虽然我们可以理解主人公对夺走了他深爱的女主人公的那个男性，以及女主人公的哥哥这两个人——乃至于他们背后的两大家族——之间的仇恨，但是复仇的过程显得过于苍白了。尤其是主人公是怎样成为一个有钱人再回来复仇的过程，更是完全没有写——简直就像是<ruby><rb>舞台装置</rb><rt>Deux ex Machina</rt></ruby>一样的设定。”
+
+“相比之下，《Le Comte de Monte-Cristo》虽然被称为爽文鼻祖，但至少相对合理地描述了主人公获得财富的过程。”
+
+学姐听到我的补充，点了点头继续说道：
+
+“而且我在阅读《Les Hauts de Hurlevent》的时候，始终有种感觉——男女主人公之间的‘爱’，似乎并不是那么简单的东西。”
+
+“也许让我来阅读这两部作品，会得到不太一样的结论吧。渡边学姐，我可以读一读你手上的这本吗？”
+
+“如果是《Fille du Livre》的话，我还是建议你从第一卷开始阅读。可惜的是，我手头目前只有从图书馆里借出的第二卷。雨宫同学你可以去那里看看，我记得这部作品那边应该收录了不止一套——大概是毕业生们捐给图书馆的吧。”
+
+“好的。非常感谢学姐的指点。那我就先去图书馆了。”
+
+“我期待你的读后感哦。”
+
+我向渡边学姐微笑了一下，随后拿起身旁的书包，将制服披在身上。
+
+抬头看去，窗外的天空已经染上了淡淡的橙色——那是宛如《Le Soleil Couchant》一般的光景。
