--- a/vol1/01-05.md
+++ b/vol1/01-05.md
@@ -63,7 +63,7 @@
 
 &emsp;
 
-将全套4册的《悲惨世界》文库本在书桌上放好后，我从抽屉中抽出一个宝蓝色封皮的笔记本。
+将全套4册的《Les Misérables》文库本在书桌上放好后，我从抽屉中抽出一个宝蓝色封皮的笔记本。
 
 写在上面的并非日记，而是一些自己曾经在那个女人使用的教材上阅读过的知识点——它们如今已从中学教科书中消失，只能在补习班中学到。我快速翻过这些内容，找到自己折了角的那一页。
 
