--- a/vol1/01-08.md
+++ b/vol1/01-08.md
@@ -24,3 +24,81 @@
 
 &emsp;
 
+得益于那个女人的教育手段，我阅读书籍的速度非常快——五年前第一次读完《Les Misérables》，只耗费了一星期的时间。
+
+因此从星期二到星期五的这四个晚上，我的活动就只有完成课程作业和去图书馆地下的房间弹两小时钢琴，以及每天阅读一册《La Fille du Livre》而已。
+
+而当我合上《La Fille du Livre》的第四卷时，产生的则是一个极端无情的想法——
+
+《La Fille du Livre》的作者对本土作品和欧美作品的把控能力，或者说，理解能力，完全不在一个层次上。
+
+我在脑海中回忆起《La Fille du Livre》的wiki页面中，刊行信息的下半部分。
+
+第五卷是主人公面对自身过去的故事，原型作品是《Train de Nuit dans la Voie Lactée》。
+
+第六卷是番外篇。
+
+第七卷和第八卷则是以女主人公为核心的故事，其原型作品是——
+
+《La Porte Étroite》。
+
+“这下完了。”
+
+这算怎么一回事啊……连我都能看出作者对欧美文学的理解能力存在缺陷，却偏偏在最重要的两卷选择了纪德的作品作为原型！脑子出问题了吗！
+
+我不由得打开浏览器，搜索《La Fille du Livre》的相关讨论——尤其是匿名社区上的发言，能够更加真实地反映出读者们的看法。
+
+“女主人公完全就是迫使主人公的青梅竹马自杀的凶手”
+
+“在我看来这部作品看完第五卷就差不多得了”
+
+“谁要看第七卷第八卷里面涉及上一代的狗血内容啊”
+
+“主人公的那个同学才是最般配的”
+
+“真以为作者不知道吗？不然干嘛在另一部作品中找补？”
+
+随便动一下轨迹点，就能发现痛斥作品本身甚至是作者本人的回复。我不由得将右臂支在桌面上，一边抓着头发一边思考。
+
+没想到《La Fille du Livre》最后两卷的评价会这么糟糕。然而其他人的意见终究只能用于参考，实际情况还是得自己阅读一遍之后才能搞清楚。
+
+还是先弄明白学姐星期二提出的那个问题好了。我这样想着，又打开一个搜索页面，找到《Les Hauts de Hurlevent》的英文版下载到电脑上，打开文件进入浏览模式，随后又翻开与四卷《La Fille du Livre》一起借来的翻译版《Les Hauts de Hurlevent》开始进行双语比对阅读。
+
+&emsp;
+
+宿舍中的微光，让我不禁睁开双眼。
+
+我从床上抬起身体。从搬进这个宿舍已经过了差不多一星期，然而还是没能完全习惯睡在床上的感觉——在这之前的五六年里，我在家中都只是往更衣室的地上铺一层毯子就睡上去。
+
+拿过枕边的手机，上面显示的时间是——星期六，12点46分。
+
+除此之外显示的，还有那个女人发来的Linie消息。
+
+【Takako Kamachi: 我明天要和几个朋友一起吃饭，你也过来。】
+
+【Takako Kamachi: 几位阿姨说她们很想你。】
+
+那个女人有一个习惯——但凡和自己的闺蜜们聚餐总要把我拉过去，仿佛我是她的挂件一般。
+
+至于她后面发来的这句话，鬼知道内容是真是假——至少在我以前经历过的饭局中，那些女人们从来就没把话题往我身上带过。
+
+但我还是决定去一趟，毕竟蹭吃蹭喝不是什么坏事。
+
+【MSK: 好的。时间和地点是？】
+
+过了两三分钟，这条消息才被打上已读的标记。
+
+【Takako Kamachi: 明天中午12点。地点我稍后发给你。】
+
+【MSK: 明白了。】
+
+随后我收到了那个女人发来的地址。我启动地图程序搜了一下路线，她似乎将聚餐地点选在了大学附近。这样一来，至少来回的路我还不至于走错。
+
+脑袋里还留着轻微的疼痛感，大概是昨晚熬夜过度了吧——虽然我很想再睡一会，但肚子却有点饿了。无奈之下，我只好走向洗面台，用冷水冲了下脸。
+
+“去食堂看看还剩下什么吧。”
+
+我将门锁好后，带着学生卡离开了旧宿舍楼。
+
+&emsp;
+
