--- a/vol1/01-08.md
+++ b/vol1/01-08.md
@@ -96,9 +96,9 @@
 
 脑袋里还留着轻微的疼痛感，大概是昨晚熬夜过度了吧——虽然我很想再睡一会，但肚子却有点饿了。无奈之下，我只好走向洗面台，用冷水冲了下脸。
 
-“去食堂看看还剩下什么吧。”
+“食堂十有八九已经关了吧……去小餐厅看看还剩下什么好了。”
 
-我将门锁好后，带着学生卡离开了旧宿舍楼。
+我随便套上制服衬衫，将门锁好后，带着学生卡离开了旧宿舍楼。
 
 &emsp;
 
