--- a/vol1/01-08.md
+++ b/vol1/01-08.md
@@ -78,7 +78,7 @@
 
 【Takako Kamachi: 几位阿姨说她们很想你。】
 
-那个女人有一个习惯——但凡和自己的闺蜜们聚餐总要把我拉过去，仿佛我是她的挂件一般。
+那个女人有一个习惯——但凡和自己的闺蜜们聚餐的时候总要把我拉过去，仿佛我是她的挂件一般。
 
 至于她后面发来的这句话，鬼知道内容是真是假——至少在我以前经历过的饭局中，那些女人们从来就没把话题往我身上带过。
 
@@ -98,7 +98,7 @@
 
 “食堂十有八九已经关了吧……去小餐厅看看还剩下什么好了。”
 
-我随便套上制服衬衫，将门锁好后，带着学生卡离开了旧宿舍楼。
+我打了个哈欠，随便套上制服衬衫，将门锁好后，带着学生卡离开了旧宿舍楼。
 
 &emsp;
 
