--- a/vol1/01-08.md
+++ b/vol1/01-08.md
@@ -1,4 +1,4 @@
-## #08 Kritiko kaj Dubo
+## #08 Kritiko kaj Dubo 
 
 我将从图书馆借来的《La Fille du Livre》前四卷放在书桌上后，启动面前的黑色笔记本电脑，准备查询一下这部作品相关的资料信息。
 
@@ -102,4 +102,8 @@
 
 &emsp;
 
-在小餐厅转了一圈后，我拿了一个大份的Döner和一瓶Sprite。仔细想想，在这个模仿了德式建筑风格的城市里可以吃到德式Döner，似乎也不是什么不合情理的事——我甚至还在饮料区看到了玻璃瓶装的啤酒，但这并不是我能喝的东西。
+在小餐厅转了一圈后，我点了一个大份的Döner和一瓶Sprite。仔细想想，在这个模仿了德式建筑风格的城市里可以吃到德式Döner，似乎也不是什么不合情理的事——我甚至还在饮料区看到了玻璃瓶装的啤酒，但这并不是我能喝的东西。
+
+随后我从小餐厅出来，走进教学楼中央的大厅。找了个长椅坐下后，我一边消灭手中的Döner，一边不时抬头看向头顶的玻璃天窗。
+
+大概是由于今天不必上课的原因，时不时有学生从我身边走过。说起来，下星期一学校为一年级的学生们准备了名为野外学习的远足郊游活动，也不知道我会被分在班里的哪一组。
