--- a/vol1/01-08.md
+++ b/vol1/01-08.md
@@ -107,3 +107,8 @@
 随后我从小餐厅出来，走进教学楼中央的大厅。找了个长椅坐下后，我一边消灭手中的Döner，一边不时抬头看向头顶的玻璃天窗。
 
 大概是由于今天不必上课的原因，时不时有学生从我身边走过。说起来，下星期一学校为一年级的学生们准备了名为野外学习的远足郊游活动，也不知道我会被分在班里的哪一组。
+
+午饭的时间很快结束了。我将Döner的包装纸和空了的饮料瓶分别丢进附近的分类垃圾桶，又绕进便利店，目光逡巡于货架上的商品之间。对我而言，决定自己晚上要吃什么这件事，有时候并不像想象中的那样简单。
+
+最后我带着一盒酱油炒面和一份桶装的红辣椒味薯片离开了。中午的肉已经吃的够多了，晚上稍微素一点就好。反正旧宿舍地下层的厨房里有热水壶，到时候烧一壶水把面泡好再倒掉水拌一下，就不会产生不必要的汤汁。
+
