--- a/vol1/01-08.md
+++ b/vol1/01-08.md
@@ -66,7 +66,7 @@
 
 &emsp;
 
-宿舍中的微光，让我不禁睁开双眼。
+从窗外射入的微光，让我不禁睁开双眼。
 
 我从床上抬起身体。从搬进这个宿舍已经过了差不多一星期，然而还是没能完全习惯睡在床上的感觉——在这之前的五六年里，我在家中都只是往更衣室的地上铺一层毯子就睡上去。
 
@@ -104,11 +104,22 @@
 
 在小餐厅转了一圈后，我点了一个大份的Döner和一瓶Sprite。仔细想想，在这个模仿了德式建筑风格的城市里可以吃到德式Döner，似乎也不是什么不合情理的事——我甚至还在饮料区看到了玻璃瓶装的啤酒，但这并不是我能喝的东西。
 
-随后我从小餐厅出来，走进教学楼中央的大厅。找了个长椅坐下后，我一边消灭手中的Döner，一边不时抬头看向头顶的玻璃天窗。
+随后我从小餐厅出来，走进教学楼中央的大厅，找了个长椅坐下。在消灭手中的Döner的这段时间里，我偶尔会抬头看一看头顶的玻璃天窗。大概是由于今天不必上课的原因，时不时有学生从我的身边或是楼上走过。
 
-大概是由于今天不必上课的原因，时不时有学生从我身边走过。说起来，下星期一学校为一年级的学生们准备了名为野外学习的远足郊游活动，也不知道我会被分在班里的哪一组。
+说起来，下星期一学校为一年级的学生们准备了名为野外学习的远足郊游活动，也不知道我会被分在班里的哪一组。
 
 午饭的时间很快结束了。我将Döner的包装纸和空了的饮料瓶分别丢进附近的分类垃圾桶，又绕进便利店，目光逡巡于货架上的商品之间。对我而言，决定自己晚上要吃什么这件事，有时候并不像想象中的那样简单。
 
 最后我带着一盒酱油炒面和一份桶装的红辣椒味薯片离开了。中午的肉已经吃的够多了，晚上稍微素一点就好。反正旧宿舍地下层的厨房里有热水壶，到时候烧一壶水把面泡好再倒掉水拌一下，就不会产生不必要的汤汁。
 
+我一边翻阅着《UTAS Studenten》等群组中的无聊对话，时而适当地回复几条信息，一边走在返回旧宿舍的路上。
+
+灰蒙蒙的天上下着毛毛雨，感觉有一点点冷。不过对我而言，还不至于到必须打伞的程度。回到房间的时候，衬衫也只是稍微被打湿了一点而已。
+
+我将装有盒装炒面和桶装薯片的塑料袋丢在床上，又开始翻阅桌上的笔记本，上面写着昨晚阅读《Les Hauts de Hurlevent》时留下的笔记。
+
+脑海中出现的，是女主人公向她的女仆倾诉自己对主人公爱意的话：
+
+> <ruby><rb>エドガーに対する愛は、森の木の葉みたいなもので、時と共に変わるでしょう。</rb><rt>My love for Linton is like the foliage in the woods: time will change it,</rt></ruby><ruby><rb>冬が来れば木の葉が変わるみたいに。</rb><rt>I'm well aware, as winter changes the trees. </rt></ruby><ruby><rb>ところがヒースクリフにたいするあたしの愛は、土に埋もれた永遠の岩みたいなものなのよ。</rb><rt>My love for Heathcliff resembles the eternal rocks beneath</rt></ruby>
+>
+> <ruby><rb>あたしはヒースクリフなのよ。彼はいつでも、どんなときにも、あたしの心の中にいるの。</rb><rt>I am Heathcliff! He's always, always in my mind</rt></ruby>
