--- a/vol1/01-08.md
+++ b/vol1/01-08.md
@@ -120,6 +120,10 @@
 
 脑海中出现的，是女主人公向她的女仆倾诉自己对主人公爱意的话：
 
-> <ruby><rb>エドガーに対する愛は、森の木の葉みたいなもので、時と共に変わるでしょう。</rb><rt>My love for Linton is like the foliage in the woods: time will change it,</rt></ruby><ruby><rb>冬が来れば木の葉が変わるみたいに。</rb><rt>I'm well aware, as winter changes the trees. </rt></ruby><ruby><rb>ところがヒースクリフにたいするあたしの愛は、土に埋もれた永遠の岩みたいなものなのよ。</rb><rt>My love for Heathcliff resembles the eternal rocks beneath</rt></ruby>
+> <ruby><rb>エドガーに対する愛は、あたしにはよくわかっているのよ。森の木の葉みたいなもので、</rb><rt>My love for Linton is like the foliage in the woods: time will change it, </rt></ruby>
 >
-> <ruby><rb>あたしはヒースクリフなのよ。彼はいつでも、どんなときにも、あたしの心の中にいるの。</rb><rt>I am Heathcliff! He's always, always in my mind</rt></ruby>
+> <ruby><rb>時と共に変わるでしょう。冬が来れば木の葉が変わるみたいに。</rb><rt>I'm well aware, as winter changes the trees.</rt></ruby>
+>
+> <ruby><rb>ところがヒースクリフにたいするあたしの愛は、土に埋もれた永遠の岩みたいなものなのよ。</rb><rt>My love for Heathcliff resembles the eternal rocks beneath.</rt></ruby>
+>
+> <ruby><rb>あたしはヒースクリフなのよ。彼はいつでも、どんなときにも、あたしの心の中にいるの。</rb><rt>I am Heathcliff! He's always, always in my mind.</rt></ruby>
