--- a/vol1/01-08.md
+++ b/vol1/01-08.md
@@ -127,3 +127,33 @@
 > <ruby><rb>ところがヒースクリフにたいするあたしの愛は、土に埋もれた永遠の岩みたいなものなのよ。</rb><rt>My love for Heathcliff resembles the eternal rocks beneath.</rt></ruby>
 >
 > <ruby><rb>あたしはヒースクリフなのよ。彼はいつでも、どんなときにも、あたしの心の中にいるの。</rb><rt>I am Heathcliff! He's always, always in my mind.</rt></ruby>
+
+乍看之下，的确是令人感动的话语。
+
+然而，我却无法容忍自己不去思考这些话语“背后”的内容——当作者将男女主人公设置为表里一体的存在时，把无辜的人们卷进来，这本身就是一场悲剧。
+
+“真不知道林顿一家子人是倒了多大的霉，才会被呼啸山庄的人们招惹上。”
+
+我摇摇头，又翻阅笔记，找到记有《La Fille du Livre》第二卷笔记的内容。
+
+如果说艾米莉在《Les Hauts de Hurlevent》中描述的是主人公之间基于本能而产生的爱情（算是对这部小说的评论中经常提到的一个概念）的话，《La Fille du Livre》的第二卷中的主角之间又被作者加上了“血缘”这一要素。
+
+从幼年期起便长期分离的异性，由于血缘关系的存在而在性的意义上互相吸引，也算是文学作品乃至现实中经常被拿来讨论的内容了。我在网络上曾经看到过这方面的一些研究资料，也有一些心理学家认为人类的本能中就存在对近亲产生性吸引的要素，因此才发展出了一套机制加以对抗——这一机制也被这些心理学家们认为是从小一起生活的异性很难产生恋爱感情的原因。
+
+如果从这一方向来解读，那么《La Fille du Livre》第二卷的这对父女之间的感情就更加具有宿命论的色彩了。但如果将其和《Les Hauts de Hurlevent》男女主人公之间的感情对比的话——
+
+不对。
+
+《Les Hauts de Hurlevent》的男主人公虽然对女主人公的婚姻心生恨意，也对女主人公的女儿进行了报复，但那**终究不是他的女儿**。反过来讲，女主人公的女儿也**从始至终都没有对主人公产生过一丝一毫的恋爱感情**。
+
+当父女之间的禁断之恋嫁接到《Les Hauts de Hurlevent》这一原型中的爱情之上的时候——
+
+**故事的悲剧程度反而因为这一嫁接行为而被冲淡了**。
+
+掺杂了“血缘关系”的“爱情”，还能算作是“爱情”吗？
+
+或者说，将“血缘关系”这个设定嫁接上去，真的是“必要”的吗？
+
+从这个意义上看，将《La Fille du Livre》的第二卷视为失败作丝毫不算过分。
+
+然而头痛却挥之不去。大概是脑子里想事情想多了吧。
