--- a/vol1/01-08.md
+++ b/vol1/01-08.md
@@ -156,4 +156,8 @@
 
 从这个意义上看，将《La Fille du Livre》的第二卷视为失败作丝毫不算过分。
 
-然而头痛却挥之不去。大概是脑子里想事情想多了吧。
+头痛在脑海中盘桓不散。明明从没有喝过一滴酒，我却觉得自己如今的状态宛如《Les Misérables》中那个沉迷于酒精中的怀疑主义者。
+
+大概是脑子里想事情想多了吧。我现在也没心情把淋湿的衬衫丢去洗衣房，于是随便找了件T恤衫换上后，倒在床上闭上了眼睛。
+
+至于炒面和薯片——那就等醒过来再说。伴随着止不住的头疼，意识以蚂蚁一般的速度逐渐远去。
