--- a/vol1/01-09.md
+++ b/vol1/01-09.md
@@ -1,1 +1,6 @@
 ## #09 Alta Febro
+
+——甚至连无视这帮围绕着在场或不在场的人多嘴多舌的四十岁欧巴桑们，只是将面前的食物塞进胃里这件事，对我来讲都宛如一场奢望。
+
+当我拖着不知为何疲惫不堪的身体坐电车赶到餐厅的时候，发现唯并不在这里。按那个女人的说法，似乎是和柏原琴美阿姨的女儿千夏——也是唯在中等部的学姐——一起出去了。随后我跟着那个女人走进餐厅，被她安排坐在自己和琴美阿姨中间的位置。
+
