--- a/vol1/01-09.md
+++ b/vol1/01-09.md
@@ -2,5 +2,6 @@
 
 ——甚至连无视这帮围绕着在场或不在场的人多嘴多舌的四十岁欧巴桑们，只是将面前的食物塞进胃里这件事，对我来讲都宛如一场奢望。
 
-当我拖着不知为何疲惫不堪的身体坐电车赶到餐厅的时候，发现唯并不在这里。按那个女人的说法，似乎是和柏原琴美阿姨的女儿千夏——也是唯在中等部的学姐——一起出去了。随后我跟着那个女人走进餐厅，被她安排坐在自己和琴美阿姨中间的位置。
+当我拖着不知为何疲惫不堪的身体坐电车赶到餐厅的时候，发现唯并不在这里。按那个女人的说法，似乎是和<ruby><rb>柏原琴美</rb><rt>Kashiwabara Kotomi</rt></ruby>阿姨的女儿<ruby><rb>千夏</rb><rt>Chika</rt></ruby>——也是唯在中等部的学姐——一起出去了。随后我跟着那个女人走进餐厅，被她安排坐在自己和琴美阿姨中间的位置。
 
+身为单身妈妈的琴美阿姨，开有一间小型建筑设计工作室。还是小学生的我，第一次被那个女人带到琴美阿姨家的时候，她就已经和千夏两个人单独生活了——后来我才通过听这群女人在餐桌上七嘴八舌提到的内容得知，琴美阿姨的前夫在千夏只有两岁的时候，和一个从事风俗业的女性发生了婚外情。琴美阿姨发现了她前夫日常行为中的异常举止，通过私家侦探拿到了证据后，果断提出了离婚。
