--- a/vol1/01-09.md
+++ b/vol1/01-09.md
@@ -4,4 +4,7 @@
 
 当我拖着不知为何疲惫不堪的身体坐电车赶到餐厅的时候，发现唯并不在这里。按那个女人的说法，似乎是和<ruby><rb>柏原琴美</rb><rt>Kashiwabara Kotomi</rt></ruby>阿姨的女儿<ruby><rb>千夏</rb><rt>Chika</rt></ruby>——也是唯在中等部的学姐——一起出去了。随后我跟着那个女人走进餐厅，被她安排坐在自己和琴美阿姨中间的位置。
 
-身为单身妈妈的琴美阿姨，开有一间小型建筑设计工作室。还是小学生的我在第一次被那个女人带到琴美阿姨家的时候，她就已经和千夏两个人单独生活了——后来我才通过听这群女人在餐桌上七嘴八舌提到的内容得知，琴美阿姨的前夫在千夏只有两岁的时候，和一个从事风俗业的女性发生了婚外情。琴美阿姨发现了她前夫日常行为中的异常举止，通过私家侦探拿到了证据后，果断提出了离婚。
+身为单身妈妈的琴美阿姨，开有一间小型建筑设计工作室。还是小学生的我，第一次被那个女人带到琴美阿姨家的时候，她就已经和千夏两个人单独生活了——后来我才通过听这群女人在餐桌上七嘴八舌提到的内容得知，琴美阿姨的前夫在千夏只有两岁的时候，和一个从事风俗业的女性发生了婚外情。琴美阿姨发现了她前夫日常行为中的异常举止，通过私家侦探拿到了证据后，果断提出了离婚要求。而她的前夫和那个从事风俗业的女性，从此便离开了这个城市再无消息。
+
+像琴美阿姨这样的状况绝非个案。不如说，今天这场聚餐上的女性们都有着程度或轻或重的家庭问题。我曾在某次聚餐上，听到某位阿姨批判自己沉迷新兴宗教活动的丈夫。还有一位阿姨在另一次聚餐上为自己的前夫陷入打小钢珠的泥潭而向闺蜜们倾诉自己的烦恼。唯的母亲也遇到了类似的情况，不过事件的性质在我看来实在太过恶劣，乃至于我不想将唯的父亲——假设他还活着的话——当成一个合格的“人”来看待。
+
