--- a/vol1/01-09.md
+++ b/vol1/01-09.md
@@ -8,3 +8,4 @@
 
 像琴美阿姨这样的状况绝非个案。不如说，今天这场聚餐上的女性们都有着程度或轻或重的家庭问题。我曾在某次聚餐上，听到某位阿姨批判自己沉迷新兴宗教活动的丈夫。还有一位阿姨在另一次聚餐上为自己的前夫陷入打小钢珠的泥潭而向闺蜜们倾诉自己的烦恼。唯的母亲也遇到了类似的情况，不过事件的性质在我看来实在太过恶劣，乃至于我不想将唯的父亲——假设他还活着的话——当成一个合格的“人”来看待。
 
+那个女人在和她的闺蜜们聚餐的时候，也很少提及自己和那个男人的关系。
