--- a/vol1/01-09.md
+++ b/vol1/01-09.md
@@ -6,6 +6,6 @@
 
 身为单身妈妈的琴美阿姨，开有一间小型建筑设计工作室。还是小学生的我，第一次被那个女人带到琴美阿姨家的时候，她就已经和千夏两个人单独生活了——后来我才通过听这群女人在餐桌上七嘴八舌提到的内容得知，琴美阿姨的前夫在千夏只有两岁的时候，和一个从事风俗业的女性发生了婚外情。琴美阿姨发现了她前夫日常行为中的异常举止，通过私家侦探拿到了证据后，果断提出了离婚要求。而她的前夫和那个从事风俗业的女性，从此便离开了这个城市再无消息。
 
-像琴美阿姨这样的状况绝非个案。不如说，我见过的这些来参加过聚餐的女性们，都有着程度或轻或重的家庭问题。我曾在某次聚餐上，听到某位阿姨批判自己那位沉迷新兴宗教活动的前夫。还有一位阿姨当年顶着父母的剧烈反对和自己两情相悦的男友结了婚，却生了一个患有先天性自闭症的儿子，至今回老家的时候还被人指指点点。唯的母亲也遇到了类似的情况，不过事件的性质在我看来实在太过恶劣，乃至于我不想将唯的父亲当成一个合格的“人”来看待。大概那个人渣的灵魂已经在觉醒剂带来的快乐中升天了吧。
+琴美阿姨的状况绝非个案。不如说，我曾在历次聚餐中见过的这些女性们，都有着程度或轻或重的家庭问题。我曾在某次聚餐上，听到某位阿姨批判自己那位沉迷新兴宗教活动的前夫。还有一位阿姨当年顶着父母的剧烈反对和自己两情相悦的男友结了婚，却生了一个患有先天性自闭症的儿子，至今回老家的时候还被人指指点点。唯的母亲也遇到了类似的情况，不过事件的性质在我看来实在太过恶劣，乃至于我不想将唯的父亲当成一个合格的“人”来看待。大概那个人渣的灵魂已经在觉醒剂带来的快乐中升天了吧。
 
 那个女人在和她的闺蜜们聚餐的时候，也很少提及自己和那个男人的关系。
