--- a/vol1/01-09.md
+++ b/vol1/01-09.md
@@ -1,11 +1,24 @@
 ## #09 Alta Febro
 
-——甚至连无视这帮围绕着在场或不在场的人多嘴多舌的四十岁欧巴桑们，只是将面前的食物塞进胃里这件事，对我来讲都宛如一场奢望。
+——甚至连无视这帮多嘴多舌的四十岁欧巴桑们，只是将面前的食物塞进胃里这件事，对我来讲都宛如一场奢望。
 
 当我拖着不知为何疲惫不堪的身体坐电车赶到餐厅的时候，发现唯并不在这里。按那个女人的说法，似乎是和<ruby><rb>柏原琴美</rb><rt>Kashiwabara Kotomi</rt></ruby>阿姨的女儿<ruby><rb>千夏</rb><rt>Chika</rt></ruby>——也是唯在中等部的学姐——一起出去了。随后我跟着那个女人走进餐厅，被她安排坐在自己和琴美阿姨中间的位置。
 
-身为单身妈妈的琴美阿姨，开有一间小型建筑设计工作室。还是小学生的我，第一次被那个女人带到琴美阿姨家的时候，她就已经和千夏两个人单独生活了——后来我才通过听这群女人在餐桌上七嘴八舌提到的内容得知，琴美阿姨的前夫在千夏只有两岁的时候，和一个从事风俗业的女性发生了婚外情。琴美阿姨发现了她前夫日常行为中的异常举止，通过私家侦探拿到了证据后，果断提出了离婚要求。而她的前夫和那个从事风俗业的女性，从此便离开了这个城市再无消息。
+身为单身妈妈的琴美阿姨，开了一家规模不大的建筑设计工作室。还是小学生的我，第一次被那个女人带到琴美阿姨家的时候，她就已经和千夏两个人单独生活了——后来我才通过听这群女人在餐桌上七嘴八舌提到的内容得知，琴美阿姨的前夫在千夏只有两岁的时候，和一个从事风俗业的女性发生了婚外情。琴美阿姨发现了她前夫日常行为中的异常举止，通过私家侦探拿到了证据后，果断提出了离婚要求。而她的前夫和那个从事风俗业的女性，从此便离开了这个城市再无消息。
 
 琴美阿姨的状况绝非个案。不如说，我曾在历次聚餐中见过的这些女性们，都有着程度或轻或重的家庭问题。我曾在某次聚餐上，听到某位阿姨批判自己那位沉迷新兴宗教活动的前夫。还有一位阿姨当年顶着父母的剧烈反对和自己两情相悦的男友结了婚，却生了一个患有先天性自闭症的儿子，至今回老家的时候还被人指指点点。唯的母亲也遇到了类似的情况，不过事件的性质在我看来实在太过恶劣，乃至于我不想将唯的父亲当成一个合格的“人”来看待。大概那个人渣的灵魂已经在觉醒剂带来的快乐中升天了吧。
 
-那个女人在和她的闺蜜们聚餐的时候，也很少提及自己和那个男人的关系。
+那个女人在和她的闺蜜们聚餐的时候，很少提及自己和那个男人的关系；与此相对的，她的闺蜜们也从来都是用“政树君”来称呼我，而很少提到我从那个男人继承而来的姓氏。当然，这并不妨碍那个女人的闺蜜们在某个她不在的场合就此说长道短——正如如今她们讨论着不在场的那些人一样。
+
+反正对我而言，这个姓氏也没什么好留恋的。在规定夫妇必须同姓的制度之下，结婚后把自己的姓氏改掉也不算什么大不了的事——前提是，我能活到提交和某个女性的结婚申请书的那一天。
+
+感觉自己的意识有点模糊。我摸了摸额头，发现比早上的时候热了一点。这时我才发现，自己的嗓子也有点不舒服。
+
+女人们叽叽喳喳的声音传到了我的耳边。
+
+“说起来朝仓学长最近似乎很忙呢。”
+
+“没记错的话，他夫人病的很重，似乎也就在这几天了。”
+
+“说的是遥学姐吗？我记得上学的时候就听说她身体不太好来着。”
+
