--- a/vol1/01-09.md
+++ b/vol1/01-09.md
@@ -12,7 +12,7 @@
 
 反正对我而言，这个姓氏也没什么好留恋的。在规定夫妇必须同姓的制度之下，结婚后把自己的姓氏改掉也不算什么大不了的事——前提是，我能活到提交和某个女性的结婚申请书的那一天。
 
-感觉自己的意识有点模糊。我摸了摸额头，发现比早上的时候热了一点。这时我才发现，自己的嗓子也有点不舒服。
+感觉意识有点模糊。我摸了摸额头，发现比早上的时候热了一点。这时我才发现，嗓子也有点不舒服，像是有什么东西堵着一样。
 
 女人们叽叽喳喳的声音传到了我的耳边。
 
