--- a/vol1/01-09.md
+++ b/vol1/01-09.md
@@ -8,7 +8,7 @@
 
 琴美阿姨的状况绝非个案。不如说，我曾在历次聚餐中见过的这些女性们，都有着程度或轻或重的家庭问题。我曾在某次聚餐上，听到某位阿姨批判自己那位沉迷新兴宗教活动的前夫。还有一位阿姨当年顶着父母的剧烈反对和自己两情相悦的男友结了婚，却生了一个患有先天性自闭症的儿子，至今回老家的时候还被人指指点点。唯的母亲也遇到了类似的情况，不过事件的性质在我看来实在太过恶劣，乃至于我不想将唯的父亲当成一个合格的“人”来看待。大概那个人渣的灵魂已经在觉醒剂带来的快乐中升天了吧。
 
-那个女人在和她的闺蜜们聚餐的时候，很少提及自己和那个男人的关系；与此相对的，她的闺蜜们也从来都是用“政树君”来称呼我，而很少提到我从那个男人继承而来的姓氏。当然，这并不妨碍那个女人的闺蜜们在某个她不在的场合就此说长道短——正如如今她们讨论着不在场的那些人一样。
+那个女人在和她的闺蜜们聚餐的时候，很少提及自己和那个男人的关系；与此相对的，她的闺蜜们也从来都是用“政树君”来称呼我，而很少提到我从那个男人继承而来的姓氏。当然，这并不妨碍那个女人的闺蜜们在某个她不在的场合就此说长道短——正如此刻她们讨论着不在场的那些人一样。
 
 反正对我而言，这个姓氏也没什么好留恋的。在规定夫妇必须同姓的制度之下，结婚后把自己的姓氏改掉也不算什么大不了的事——前提是，我能活到提交和某个女性的结婚申请书的那一天。
 
