--- a/vol1/01-09.md
+++ b/vol1/01-09.md
@@ -22,3 +22,25 @@
 
 “说的是遥学姐吗？我记得上学的时候就听说她身体不太好来着。”
 
+“<ruby><rb>隆子</rb><rt>Takako</rt></ruby>你没听说什么消息吗？”
+
+“没有，我们都多少年没联系过了。”
+
+耳边传来那个女人若无其事的声音。然而我别说继续听女人们讲话了，甚至无法将面前的菜吃下去。之前就觉得发痒的喉咙像是烧着了一般，我想咳几下，可又怕打扰到那个女人和她的闺蜜们。
+
+“政树君，你怎么了？”
+
+琴美阿姨似乎察觉到我有点不太对劲，向我搭话询问。这时那个女人才将视线转向了我。
+
+“政树，要么你先回去吧。”
+
+“好的。”
+
+我勉强站起身体，又向在座的各位阿姨鞠躬致歉：
+
+“抱歉给各位添了麻烦。在此失陪了。”
+
+说罢我便转过身，以尽可能平稳的脚步向出口走去。
+
+&emsp;
+
