--- a/vol1/01-09.md
+++ b/vol1/01-09.md
@@ -46,7 +46,7 @@
 
 虽然打算先回学校，但当我将手放在额头上试图确认自己是否发烧时，就确定回家休息才是更为稳妥的解决方案——原因很简单，我带到学校的药物远没有家里齐全。
 
-每当离家更近一步，胃部的痉挛感就越发强烈——然而多年以来的经验告诉我，越是这个时候越不能打乱节奏，否则会演变成更糟糕的状况。于是我只能数着步子，一步步走近公寓楼，刷卡开门后走进大厅。电梯门刚一打开，我便栽了进去，右手抓住最里面的扶手靠在上面——仅有的理智告诉我，一旦此时坐倒在地，恐怕就没有足够的力气站起来了。
+每当离家更近一步，胃部的痉挛感就越发强烈——然而多年以来积累的经验告诉我，越是这个时候越不能打乱节奏，否则会演变成更糟糕的状况。于是我只能数着步子，一步步走近公寓楼，刷卡开门后走进大厅。电梯门刚一打开，我便栽了进去，右手抓住最里面的扶手靠在上面——一旦此时坐倒在地，恐怕就没有足够的力气站起来了。
 
 电梯停在了8楼。我强忍着全身上下的不适，踉踉跄跄地走出电梯，找到记忆中的802门牌，掏出钥匙打开了锁。伴随着开锁的声音，我将书包丢在地上，直接向卫生间冲去。
 
