--- a/vol1/01-09.md
+++ b/vol1/01-09.md
@@ -50,3 +50,6 @@
 
 电梯停在了8楼。我强忍着全身上下的不适，踉踉跄跄地走出电梯，找到记忆中的802门牌，掏出钥匙打开了锁。伴随着开锁的声音，我将书包丢在地上，直接向卫生间冲去。
 
+随后，胃里的东西被我一口气倒进了马桶里面——此时的我总算能从精神和身体上的折磨中稍微解脱一下了。我就这样断断续续地呕吐了一分多钟，直到吐出来的不再是食物而是足以让喉咙灼伤的胃液为止。我强撑着站起身体将呕吐物冲干净之后，转回洗面台前，找出自己使用过的杯子接了点水，在口中漱了漱口又吐掉——重复了三四次之后，我才从卫生间走出来。
+
+纵使我闹出了如此大的动静，这个2LDK的公寓里仍是一片死寂。刚才我在冲向卫生间的途中曾用余光看向次卧的门——那道门果不其然锁着，大概那个男人今天也在公司加班吧。而平素把研究室的组会安排在星期日下午的那个女人，就更不用提了。
