--- a/vol1/01-09.md
+++ b/vol1/01-09.md
@@ -53,3 +53,18 @@
 随后，胃里的东西被我一口气倒进了马桶里面——此时的我总算能从精神和身体上的折磨中稍微解脱一下了。我就这样断断续续地呕吐了一分多钟，直到吐出来的不再是食物而是足以让喉咙灼伤的胃液为止。我强撑着站起身体将呕吐物冲干净之后，转回洗面台前，找出自己使用过的杯子接了点水，在口中漱了漱口又吐掉——重复了三四次之后，我才从卫生间走出来。
 
 纵使我闹出了如此大的动静，这个2LDK的公寓里仍是一片死寂。刚才我在冲向卫生间的途中曾用余光看向次卧的门——那道门果不其然锁着，大概那个男人今天也在公司加班吧。而平素把研究室的组会安排在星期日下午的那个女人，就更不用提了。
+
+我又走回主卧室，找到收纳药品的盒子，从里面翻出一根水银体温计——数字体温计被我带到学校去了。我谨慎地甩了几下，确认水银柱的位置之后，将体温计的水银部分含在口中，又看了一眼手机上的时间。
+
+五分钟后，我拿出了体温计——水银柱停在了39.8度的位置上。
+
+“阿司匹林——在这里。”
+
+我驱动脑海中仅剩的理智，从盒子里找到装有阿司匹林片的小瓶，又走进厨房翻出一个久未有人使用的玻璃杯，随便冲了一下后接了点水将药片吃了下去。
+
+虽然我的身体状况糟糕到每年都要被高烧折腾个一两次，但目前还无法确定自己属于哪一种上呼吸道感染症状的情况下，贸然用药并不会让状况有所改善，所以我也没有从盒子里拿别的药物。
+
+随后我拿着玻璃杯回到主卧室，瞥了一眼床后便走进了更衣间——没错，我没有睡在那张床上的资格。
+
+我打开收纳我在这里仅剩的衣物的塑料箱，翻出一件穿旧了的T恤衫换上。随后我在地上铺好毯子，从置物架的上面拽下自己一直使用的枕头垫在头的下面。
+
