--- a/vol1/01-09.md
+++ b/vol1/01-09.md
@@ -60,11 +60,21 @@
 
 “阿司匹林——在这里。”
 
-我驱动脑海中仅剩的理智，从盒子里找到装有阿司匹林片的小瓶，又走进厨房翻出一个久未有人使用的玻璃杯，随便冲了一下后接了点水将药片吃了下去。
+我驱动脑海中仅剩的理智，从盒子里找到装有阿司匹林片的小瓶倒出一颗药片，又走进厨房翻出一个久未有人使用的玻璃杯，随便冲了一下后接了点水将药片吃了下去。
 
 虽然我的身体状况糟糕到每年都要被高烧折腾个一两次，但目前还无法确定自己属于哪一种上呼吸道感染症状的情况下，贸然用药并不会让状况有所改善，所以我也没有从盒子里拿别的药物。
 
-随后我拿着玻璃杯回到主卧室，瞥了一眼床后便走进了更衣间——没错，我没有睡在那张床上的资格。
+随后我拿着玻璃杯回到主卧室，瞥了一眼床后，又把它连同体温计一起带进了更衣间——没错，我没有睡在那张床上的资格。
 
-我打开收纳我在这里仅剩的衣物的塑料箱，翻出一件穿旧了的T恤衫换上。随后我在地上铺好毯子，从置物架的上面拽下自己一直使用的枕头垫在头的下面。
+我打开收纳我在这里仅剩的衣物的塑料箱，翻出一件穿旧了的T恤衫换上。随后我在地上铺好毯子，从置物架的上面拽下自己一直使用的枕头垫在头的下面，盖上被子后，开始等待退烧药起效的时刻到来。
+
+&emsp;
+
+39.6度。
+
+阿司匹林的效果，只持续了两个小时。这下子可麻烦了——我在脑海中搜索着自己过去的记忆。
+
+上中学的时候，我有一次在班上突然倒下了。那一次的发烧远比现在还要严重，按那个女人的说法，当时水银体温计测出的结果差一点就到了42度。
+
+那个时候是怎么退烧的来着？对了，应该是用酒擦拭身体吧。我记得那个女人当时用的好像是一种名叫白干的酒。
 
