--- a/vol1/01-09.md
+++ b/vol1/01-09.md
@@ -78,3 +78,5 @@
 
 那个时候是怎么退烧的来着？对了，应该是用酒擦拭身体吧。我记得那个女人当时用的好像是一种名叫白干的酒。
 
+我在洗面台找到一条毛巾后，拖着沉重的脚步走进起居室，在冰箱里找到了一瓶同样的酒，随后带着酒和毛巾走进了浴室，脱下已被汗水浸透的T恤衫，用酒将毛巾润湿后开始擦拭身体。
+
