--- a/vol1/01-09.md
+++ b/vol1/01-09.md
@@ -80,3 +80,28 @@
 
 我在洗面台找到一条毛巾后，拖着沉重的脚步走进起居室，在冰箱里找到了一瓶同样的酒，随后带着酒和毛巾走进了浴室，脱下已被汗水浸透的T恤衫，用酒将毛巾润湿后开始擦拭身体。
 
+话虽如此，但我此时的体力也只能支撑自己把上半身擦一遍。接下来我冲了一下毛巾，又将酒瓶放回冰箱后回到更衣间，将换下来的T恤在地上胡乱一丢，又翻出另一件T恤换上。
+
+又过了半个小时，烧还是没有退。
+
+我看向手机上显示的时间——已经快到四点了。事到如今我只好放弃自己解决的打算，给那个女人发送消息过去，也不知道她那边有没有开完组会。
+
+【MSK: 状况不太好】
+
+【Takako Kamachi: 出什么事了？】
+
+【MSK: 发烧了】
+
+【MSK: 39度多】
+
+【MSK: 吃了阿司匹林】
+
+【MSK: 但是没什么效果】
+
+【MSK: 试着用酒擦过】
+
+【MSK: 但是也没有退烧】
+
+我已经没了组织语言的力气，只能将最基本的信息以最简短的方式发过去。
+
+又过了三四分钟，屏幕上才逐一出现已读的标记。
