--- a/vol1/01-09.md
+++ b/vol1/01-09.md
@@ -84,11 +84,9 @@
 
 又过了半个小时，烧还是没有退。
 
-我看向手机上显示的时间——已经快到四点了。事到如今我只好放弃自己解决的打算，给那个女人发送消息过去，也不知道她那边有没有开完组会。
+我看向手机上显示的时间——已经快到四点了。事到如今我只好放弃自己解决的打算，向那个女人求援——也不知道她那边有没有开完组会。
 
 【MSK: 状况不太好】
-
-【Takako Kamachi: 出什么事了？】
 
 【MSK: 发烧了】
 
