--- a/vol1/01-09.md
+++ b/vol1/01-09.md
@@ -103,3 +103,31 @@
 我已经没了组织语言的力气，只能将最基本的信息以最简短的方式发过去。
 
 又过了三四分钟，屏幕上才逐一出现已读的标记。
+
+【Takako Kamachi: 我和唯说一下，让她回去的时候给你带点吃的和营养饮料。】
+
+【Takako Kamachi: 明天还没好的话我再带你去诊所。】
+
+那个女人的回答并没有超出我的预期。我回复了一句“明白了”之后，切换到和工藤的对话窗口。
+
+【MSK: 麻烦明天帮我请个假】
+
+【MSK: 我发高烧了】
+
+【MSK: 大概要去看医生】
+
+刚打完字，手机就震动了一下。
+
+【Toshio_K: 你没关系吧？】
+
+【MSK: 不知道】
+
+【MSK: 野外学习大概去不了了】
+
+【Toshio_K: 没事，我会和菅田老师说明的】
+
+【MSK: OK】
+
+【MSK: 抱歉麻烦你了】
+
+意识在消息发送的过程中一点点模糊起来。我翻了个身，让自己面向一边的墙壁，任由手机滑落在地面上。
