--- a/vol1/01-10.md
+++ b/vol1/01-10.md
@@ -19,3 +19,12 @@
 但是这次的情况似乎比往常更为严重，一上午的时间里我输了三四瓶液体，状况仍然没有丝毫改善。中途喝下的营养饮料也被我吐了个干干净净，到最后吐出来的全都是胃液和胆汁。这下连诊所的主治医生——一个和善的老太太——都看不下去了，建议那个女人带我赶紧到大一点的医院检查。
 
 于是那个女人只好把我塞进车里，开车去了一家我并不是很熟悉的医院。这个时候的我已经意识模糊到只能勉强回答医生的问题，而完全记不得自己听到了什么又说了什么，连医院对我做了几项检查都完全没有印象，只记得过了一会那个女人又带我离开了医院——大概是从医生那里得到了结论和用药方案，打算把我带回诊所挂点滴吧。当我再一次被她塞进车里的时候，已经没有了好好坐着的力气，只能如同烂泥一般瘫在车后排的座位上。
+
+我们回到诊所后，那个女人将医院的诊断转述给老太太，随后就把我留在这里，独自一个人离开了。大概在她看来，我这拖了一晚都没好的病，给她自由的生活方式添了不少麻烦吧——毕竟我平常都是个无需她的干涉就能自己管好自己的样子。
+
+「自由」。
+
+她日常的行事作风，让我不由得将其与《La Fille du Livre》中的那位学生会长进行比较。
+
+说起来，回忆中的那个女大学生也和她们属于差不多的类型。她在留给我那个笔记本后，就如风一般消失在了我的生活中。
+
