--- a/vol1/01-10.md
+++ b/vol1/01-10.md
@@ -20,7 +20,7 @@
 
 于是那个女人只好把我塞进车里，开车去了一家我并不是很熟悉的医院。这个时候的我已经意识模糊到只能勉强回答医生的问题，而完全记不得自己听到了什么又说了什么，连医院对我做了几项检查都完全没有印象，只记得过了一会那个女人又带我离开了医院——大概是从医生那里得到了结论和用药方案，打算把我带回诊所挂点滴吧。当我再一次被她塞进车里的时候，已经没有了好好坐着的力气，只能如同烂泥一般瘫在车后排的座位上。
 
-我们回到诊所后，那个女人将医院的诊断转述给老太太，随后就把我留在这里，独自一个人离开了。大概在她看来，我这拖了一晚都没好的病，给她自由的生活方式添了不少麻烦吧——毕竟我平常都是个无需她的干涉就能自己管好自己的样子。
+我们回到诊所后，那个女人将医院的诊断转述给老太太，随后就把我留在这里，独自一个人离开了。大概在她看来，我这拖了一整天都没好的病，给她那自由的生活方式添了不少麻烦吧——毕竟我平常都是个无需她的干涉就能自己管好自己的样子。
 
 「自由」。
 
