--- a/vol1/01-10.md
+++ b/vol1/01-10.md
@@ -16,15 +16,196 @@
 
 现在是星期一下午三点半。直到清早还没有退烧的我，被那个女人从家里带出来——没有去医院，而是去了一家小诊所。每年我被各种发热症状的疾病放倒，都会到这个诊所进行治疗——而其中需要挂点滴的情况又占了大多数。
 
-但是这次的情况似乎比往常更为严重，一上午的时间里我输了三四瓶液体，状况仍然没有丝毫改善。中途喝下的营养饮料也被我吐了个干干净净，到最后吐出来的全都是胃液和胆汁。到了中午十一点，连诊所的主治医生——一个和善的老太太——都看不下去了，建议那个女人带我赶紧到大一点的医院检查。
+但是这次的情况似乎比往常更为严重，一上午的时间里我输了三四袋液体，状况仍然没有丝毫改善。中途喝下的营养饮料也被我吐了个干干净净，到最后吐出来的全都是胃液和胆汁。到了中午十一点，连诊所的主治医生——一个和善的老太太——都看不下去了，建议那个女人带我赶紧到大一点的医院检查。
 
 于是那个女人只好把我塞进车里，开车去了一家我并不是很熟悉的医院。这个时候的我已经意识模糊到只能勉强回答医生的问题，而完全记不得自己听到了什么又说了什么，连医院对我做了几项检查都完全没有印象，只记得过了一会那个女人又带我离开了医院——大概是从医生那里得到了结论和用药方案，打算把我带回诊所挂点滴吧。当我再一次被她塞进车里的时候，已经没有了好好坐着的力气，只能如同烂泥一般瘫在车后排的座位上。
 
-我们回到诊所后，那个女人将医院的诊断转述给老太太，随后就把我留在这里，独自一个人离开了。大概在她看来，我这拖了一整天都没好的病，给她那自由的生活方式添了不少麻烦吧——毕竟我平常都是个无需她的干涉就能自己管好自己的样子。
+我们回到诊所后，那个女人将医院的诊断转述给老太太，随后就把我丢在诊所的病床上，独自一个人离开了。大概在她看来，我这拖了一整天都没好的病给她添了不少麻烦吧——毕竟我平常都是个无需她的干涉就能自己管好自己的样子。
 
 「自由」。
 
-她日常的行事作风，让我不由得将其与《La Fille du Livre》中的那位学生会长进行比较。
+没错，这就是那个女人的生活方式。而她对我的管束，也属于相当放任的那一类。
 
-说起来，回忆中的那个女大学生也和她们属于差不多的类型。她在留给我那个笔记本后，就如风一般消失在了我的生活中。
+手机屏幕上，又一次出现了通知消息。
 
+【snowsee: 现在怎么样？烧退掉了吗？】
+
+我看到这条消息，心中五味杂陈。在我的记忆中，渡边学姐算是第一个会这样关心我的身体状况的人。
+
+思索了一下后，我在手机上编辑着消息回应：
+
+【MSK: 烧倒是退了一点，但目前还在输液。医生说今天先多挂几袋，之后再根据情况决定输液量。】
+
+我抬头看向头顶的输液袋，500ml的葡萄糖注射液还剩下三分之一的量。之前已经挂了一袋溶有药品的100ml生理盐水，而之后似乎还有另一种药品需要输液——按老太太的说法，应该是用250ml生理盐水调配了维持体液电解质平衡的药物。之前装配输液管的时候，老太太特地叮嘱护士将输液速度调慢一些，所以距离输液结束，还有大约两个小时。
+
+【snowsee: 雨宫同学身边有家人陪着吗？】
+
+【MSK: 没有。】
+
+消息很快显示已读，然而等我看到回复，已经又过了近两分钟。
+
+【snowsee: 你现在在哪？告诉我地址，我过去看你吧。】
+
+这次轮到我陷入了迟疑。平心而论，我并不想给学姐添不必要的麻烦。但心里却还有另一个声音——以我现在的身体状态，独自回到学校恐怕要费一番功夫。
+
+想了想，我还是把诊所的所在地发送了过去。
+
+【snowsee: 要我带点什么吗？我怕自己随便买的话你会不喜欢。】
+
+【MSK: 让我先想想。】
+
+【MSK: 巧克力、PO〇RI和袋装果冻，就这些。】
+
+【snowsee: 那我买好了就去找你。你多注意。】
+
+——谢谢。
+
+我心里默念着，编辑了一个微笑的颜文字作为回应。
+
+&emsp;
+
+“给，这是我按雨宫同学你发来的消息买的。”
+
+不到一小时后，来到诊所的渡边学姐走到我的床边，递给我一个塑料袋后，拉过旁边的一个椅子坐下。
+
+我从塑料袋中取出塑料瓶，抬起正在输液的左手握住瓶身，右手拧开瓶盖放在一边，又将塑料瓶从左手转到右手，喝了一口里面的PO〇RI。
+
+“怎么样，味道还适应吗？“
+
+我没有立刻回答渡边学姐的问题——这是因为我在某次点击Kwetter的热搜时，发现有人写了”PO〇RI的味道和稀释过的**某种液体**很像“的文字。虽然在我看来两者的味道并没有那么接近，但要我在学姐面前讲这句话，未免有性骚扰的嫌疑。
+
+“……还好吧。至少我现在还有力气喝下去。”
+
+最后我只能做出如此模棱两可的回应。渡边学姐看到我的样子没有大碍，就没有再多说什么。
+
+随后，学姐从放在一旁的书包中拿出了一个笔记本，翻到空白页后，又用自动铅笔在上面勾勒着。
+
+“学姐喜欢画画吗？”
+
+“嗯。小时候学过一段时间。”
+
+“我在这方面可是完全不行。初中时的美术课老师，对我画的素描画评价很差。”
+
+“人总是有擅长和不擅长的事嘛，雨宫同学。我在音乐方面可是一塌糊涂，连五线谱都搞不太清楚，唱歌更是五音不全。”
+
+”这样吗？“
+
+我不由得笑了出来。
+
+擅长音乐而不擅长绘画的我，和擅长绘画而不擅长音乐的学姐。
+
+这样的我和她……
+
+我眨眨眼，赶走多余的念头，又拧开袋装果冻的盖子，一边喝着果冻，一边注视着画着素描的学姐。
+
+长发略带自然卷的学姐那一心不乱的样子，让我想到了《La Fille du Livre》中，同样有着绘画爱好的那位学生会长。
+
+作品中的那位学生会长，有着颇为自由的生活作风，这一点在读者群体中产生了相当大的争议。
+
+——「自由」。
+
+一想到这两个字，就让我回想起那个已然回到研究室的女人。不，不仅是她。另一个稍微年轻一点的女性的背影，同样浮现在了我的记忆中。
+
+然而，从渡边学姐身上，我却似乎能感受到之前从那两个女人身上感觉不到的某种东西。
+
+那究竟是什么，此刻的我无从分辨。同样无从分辨的，还有内心中隐约存在的某种感情。
+
+&emsp;
+
+我将袋装果冻和巧克力的包装化为需要处理掉的垃圾后，抬头看向头顶的输液袋——由于护士后来又来调整过一次输液速度，最后一袋目前还剩不到一半的量。
+
+这时我的余光捕捉到，似乎完成了手中那张素描画的渡边学姐，正打算把笔记本合上。
+
+“等一下。”
+
+听到我的声音，学姐停下了动作。
+
+“我能看一下那张画吗？”
+
+学姐的脸色似乎有点不太对。她迟疑了一下回答：
+
+“不行。”
+
+“因为画的是我吗？难不成，是裸体？”
+
+学姐没有回答——看样子我猜中了。这样一来，我似乎也可以理解她不想让我看到那幅画的原因。
+
+然而，我无论如何都想看到那幅素描画。于是我尝试改变了自己的声线，以**女孩子一般的声音和口气**问道：
+
+“真的不可以吗？”
+
+学姐的脸颊一下子红了。
+
+“你，你这个样子……犯规了吧……”
+
+“给人家看看好不好啊？”
+
+“怪不好意思的……”
+
+“拜，拜托你了嘛……”
+
+“好啦好啦。真拿你没办法。”
+
+看到我一脸委屈的样子，学姐只好将笔记本递了过来。我用右手拿着笔记本，端详着学姐的画作。
+
+画中人的眼神和表情，毫无疑问是我没错。
+
+然而，发型却比我如今的短发要长——更准确地说，已经到了介于短发和中短波波头的长度。
+
+更重要的是，**没有喉结，胸前却有着足以分辨的膨胀**。
+
+“这是……把我给……性转了吗……”
+
+“对啊。雨宫同学你看完了没？”
+
+看到宛如陷入自暴自弃状态的学姐，我只好点了点头。
+
+“嗯，看完了。”
+
+“不会笑我？”
+
+“怎么会呢。”
+
+“不许骗我。”
+
+“当然不会骗你。”
+
+这是我的真心话，因为我并非从来没有幻想过自己变成一个女孩子的情况。
+
+我将笔记本递了回去，学姐幽幽地说道：
+
+“感觉自己像是被雨宫同学抓住了把柄一样。”
+
+“那我也讲一个自己的黑历史，这样就算扯平吧。”
+
+“真的？”
+
+“先说好，学姐不许因为这个事讨厌我。”
+
+“好，我答应你。”
+
+听到学姐的回答，我下定决心后，尽可能若无其事地说着：
+
+“其实我有过一次性经验。”
+
+听到我的这句话，学姐一下子张口结舌。
+
+“雨宫同学，你没开玩笑吧？”
+
+“没开玩笑。”
+
+“性经验的意思是……和女孩子**做**过？”
+
+“对。越线的那种**做**。”
+
+“什么时候的事？”
+
+“去年。我母亲在大学里从事研究工作，所以我休息日的时候偶尔也会被她带到校园里面——当然，她把我带进去之后就不怎么管我了，只要我按时去找她就行。”
+
+听到我的话，学姐露出一副若有所思的样子。
+
+“去年黄金周的某一天……我忘了是哪天了，那天我一个人在校园里瞎逛，最后跑到人工湖边发呆。大概过了一小时吧，我突然发现，身边坐了一个女大学生。”
+
+“女大学生？”
+
+“应该是吧。她的表情似乎很忧伤，但我也不清楚原因。”
