--- a/vol1/01-10.md
+++ b/vol1/01-10.md
@@ -208,4 +208,39 @@
 
 “女大学生？”
 
-“应该是吧。她的表情似乎很忧伤，但我也不清楚原因。”
+“应该是吧。她的表情似乎很忧伤，但我也不清楚原因。不如说，我当时脑子里根本就没在想这个原因，只想着自己家里的那点事——如果那能算是个家的话。”
+
+“雨宫同学的家里……发生了什么吗？”
+
+我想了想，决定对学姐讲出我所知道的事。
+
+“我的父母之间关系——相当相当的糟糕。两个人之间一年说的话加起来都不会超过二十句——这可能还算多的。一家人也从来没有在一起吃过饭，更准确地说，我就没见过那两个人进过厨房。睡觉也是三个人分在不同的地方睡。那两个人平常绝大多数的时间都呆在各自的工作场所，直到深夜才会回来。”
+
+听到我的陈述，渡边学姐陷入了沉默。
+
+“我还很小的时候，那两个人有过一次非常激烈的吵架，从此就变成了我刚才说的这个样子——再之前的记忆我大概已经没有了，不过应该也好不到哪里去。”
+
+“生活在这样的环境里，雨宫同学应该很难受吧。”
+
+“上小学的时候我就已经意识到那两个人的离婚只不过是时间问题了。也许我的父母是在等我18岁成人吧，这样对他们各自都能少点麻烦。所以我那个时候就在想，是不是因为自己活着，才束缚了那两个人呢……”
+
+“那种事情才……”
+
+学姐想要反驳我，但却在中途停住了。我继续说了下去：
+
+“去年我坐在人工湖边的时候，脑子里也冒出了自己是不是就这么淹死会好一点的想法。然而，身体却动不起来。感觉自己在死前，还有一些想做的事。在这样的心态下，我不由得自言自语了起来。”
+
+——真想变成大人呢。这样的话大概就没有遗憾了吧。
+
+然后，我本以为
+
+
+
+
+
+
+
+
+
+~~说起来，回忆中的那个女大学生也和她们属于差不多的类型。她在留给我那个笔记本后，就如风一般消失在了我的生活中。~~
+
