--- a/vol1/01-10.md
+++ b/vol1/01-10.md
@@ -228,19 +228,22 @@
 
 学姐想要反驳我，但却在中途停住了。我继续说了下去：
 
-“去年我坐在人工湖边的时候，脑子里也冒出了自己是不是就这么淹死会好一点的想法。然而，身体却动不起来。感觉自己在死前，还有一些想做的事。在这样的心态下，我不由得自言自语了起来。”
+“去年我坐在人工湖边的时候，脑子里也冒出了自己是不是就这么淹死会好一点的想法。然而，身体却动不起来。感觉自己在死前，还有一些想做的事。在这样的心态下，我自言自语了起来。”
+
+&emsp;
 
 ——真想变成大人呢。这样的话大概就没有遗憾了吧。
 
-然后，我本以为
+然后，我本以为只有自己听到的内容，却被身旁的这个女大学生听到了。
 
+——你想变成大人吗？
 
+听到她蛊惑一般的温柔声音，我下意识地点了点头。
 
+女大学生从口袋里翻出一个A6活页笔记本，在上面写了一个地址后撕了下来。
 
+——那明天下午两点，到这个地址来吧。
 
+随后她就离开了，只留下拿着纸片的我在湖边继续发呆。
 
-
-
-
-~~说起来，回忆中的那个女大学生也和她们属于差不多的类型。她在留给我那个笔记本后，就如风一般消失在了我的生活中。~~
-
+&emsp;
