--- a/vol1/01-10.md
+++ b/vol1/01-10.md
@@ -247,3 +247,47 @@
 随后她就离开了，只留下拿着纸片的我在湖边继续发呆。
 
 &emsp;
+
+“雨宫同学知道那个女大学生讲的是什么意思吗？”
+
+“当然知道。可能这就是我当时觉得自己想要做的一件事吧——至于对面是谁，我其实无所谓。”
+
+“于是你第二天就和她**做**了吗？”
+
+“对。第二天我按照她留下的地址找到了一家情人旅馆，发现穿着一件黑色蕾丝连衣裙的女大学生已经在门口等我了。之后我跟着她上楼走进订好的房间，刚一关上门，她就抱着我吻了上来。不仅如此，她还刻意诱使我触碰她的身体，这时我才发现她的连衣裙下面连内衣都没穿。”
+
+“大姐姐玩的真够开的。”
+
+“之后的事情学姐你应该能想象得到了。在她的全程引导下，我们尝试了好几种姿势——从她在上面开始，到坐位，后背位，最后是正常位。从插入到射出来大概有……我想想，半个小时不到吧。当然，她有让我做好安全措施。”
+
+“这么久的？雨宫同学是什么感觉？”
+
+“很难形容。”
+
+“为什么？”
+
+“大概是精神紧张的缘故吧，**做**的时候我总觉得有点不太舒服。而且，从头到尾，都感觉身体的活动像是脱离了意识的控制一般。说起来，我都已经想不起来当时自己在想什么了，唯一能确定的事情是——”
+
+我停顿了一下，说出了自己当时的真实感受：
+
+“我**没能从整个过程中感觉到一丝一毫精神上的愉悦感**。”
+
+随后，我失落地垂下了头——这种失落感，是我隔着安全套在那个女大学生的身体里射出来的那一刻就感觉到的。
+
+渡边学姐伸出右手，温柔地摸了摸我的头——这让我仿佛产生了一种被治愈的感觉。
+
+过了一会，她才向我问道：
+
+“那之后呢？你们之后见过面吗？”
+
+“我在做完之后稍微睡了一会，等醒过来的时候，那个女大学生已经离开了。她留下的，只有一个打开了的笔记本，上面写着一行字：‘给某天偶然见到的男孩子’。落款是‘Dornröschen’。我后来查了在线翻译，知道这指的是格林童话中的‘睡美人’。”
+
+在那之后，我再也没有见过她，就宛如她从未出现过一样。
+
+讲完了故事的我，以自己都觉得震惊的苦涩声音问道：
+
+“学姐会不会觉得我很差劲，居然这么轻易就和不认识的女性**做**了？”
+
+“考虑到雨宫同学你的精神状态，似乎也不是不能理解。至于那位大姐姐，我想她当时可能是把和你做爱当成她满足某个需求的一个途径吧。所以**做**完之后，内心获得满足的她也就不再需要和你产生联系了。”
+
+
