--- a/vol1/01-10.md
+++ b/vol1/01-10.md
@@ -266,7 +266,7 @@
 
 “为什么？”
 
-“大概是精神紧张的缘故吧，**做**的时候我总觉得有点不太舒服。而且，从头到尾，都感觉身体的活动像是脱离了意识的控制一般。说起来，我都已经想不起来当时自己在想什么了，唯一能确定的事情是——”
+““可能是精神紧张的缘故吧，也可能是害怕自己体力不足所以中午吃的多了一点，在**做**的时候我总觉得有点不太舒服。而且，从头到尾，都感觉身体的活动像是脱离了意识的控制一般。说起来，我都已经想不起来当时自己在想什么了，唯一能确定的事情是——”
 
 我停顿了一下，说出了自己当时的真实感受：
 
