--- a/vol1/01-10.md
+++ b/vol1/01-10.md
@@ -266,7 +266,7 @@
 
 “为什么？”
 
-““可能是精神紧张的缘故吧，也可能是害怕自己体力不足所以中午吃的多了一点，在**做**的时候我总觉得有点不太舒服。而且，从头到尾，都感觉身体的活动像是脱离了意识的控制一般。说起来，我都已经想不起来当时自己在想什么了，唯一能确定的事情是——”
+“可能是精神紧张的缘故吧，也可能是害怕自己体力不足所以中午吃的多了一点，在**做**的时候我总觉得有点不太舒服。而且，从头到尾，都感觉身体的活动像是脱离了意识的控制一般。说起来，我都已经想不起来当时自己在想什么了，唯一能确定的事情是——”
 
 我停顿了一下，说出了自己当时的真实感受：
 
@@ -290,4 +290,20 @@
 
 “考虑到雨宫同学你的精神状态，似乎也不是不能理解。至于那位大姐姐，我想她当时可能是把和你做爱当成她满足某个需求的一个途径吧。所以**做**完之后，内心获得满足的她也就不再需要和你产生联系了。”
 
+“我从这件事得到的唯一教训，就是以后和女孩子**做**——假设我还有这个机会——的时候，**绝对不能把自己喂的太饱**。做到后来，胃里甚至有反酸水的感觉。”
 
+听到我严肃到略带悲愤的话，学姐扑哧一声笑了出来。
+
+“这个感悟倒是够有趣的。”
+
+“这样吗？”
+
+我不由得也笑了出来。这时我才发现，从昨天中午开始一直盘旋在我心中的糟糕感觉，此时已然消散无踪。
+
+“说起来，输液应该快结束了。”
+
+“要我和雨宫同学你一起回去吗？”
+
+“好啊。”
+
+接下来的几分钟里，我们就这样等待着护士的到来。
