--- a/vol1/01-11.md
+++ b/vol1/01-11.md
@@ -58,4 +58,28 @@
 
 &emsp;
 
+“说起来，雨宫你身体没问题吗？看你在室内项目的表现，似乎完成的挺吃力的。”
 
+“只能说还在恢复吧。按医生说法，估计要星期五才能彻底好起来，这几天放学之后还是得去挂点滴。”
+
+完成了室内项目的我们，现在正走在通向体育场的路上。
+
+室内项目——握力、反复横跳、坐位体前屈和仰卧起坐的成绩，就算往好了讲，也只能说不至于到特别丢人的地步——不过考虑到我平常的身体状态，即使我没有生病，最多也只能比平均水平偏下一点。
+
+负责测定成绩的老师问了我的身体状况之后，也没对我的成绩多加苛责。这一点真让我谢天谢地。
+
+顺带一提，身旁的工藤倒是在每一项都成绩拔群——我甚至看到了其他班的女生跑过来为他加油打气。
+
+真不知道这么一个不缺追求者的人气帅哥盯上公主大人是图什么——我想了想，大概是觉得和平常的女孩子谈恋爱没有成就感吧。
+
+“说起来，雨宫你准备选长跑还是往复跑？”
+
+“……让我想想。”
+
+室外的体测项目同样是四项。共通的三项是立定跳远、掷手球和50米跑，剩下一项则在20米往复跑和长跑之间二选一。
+
+病还没有完全好的我，耐力只会比平常更差。如果是长跑的话，别说跑出一个不算难看的成绩了，能不能坚持到1500米跑完都是个问题。在心里决定了选项之后，我对工藤说道：
+
+“我大概会选往复跑吧。”
+
+“”
