--- a/vol1/01-11.md
+++ b/vol1/01-11.md
@@ -72,6 +72,8 @@
 
 真不知道这么一个不缺追求者的人气帅哥盯上公主大人是图什么——我想了想，大概是觉得和平常的女孩子谈恋爱没有成就感吧。
 
+学生群里组织的人气投票，女生榜的前三名中，排在第一名的朝仓しずく学姐身为学生会长明年就要毕业，显然不可能有足够的时间拉近关系；而排在第三名的柏原同学是中等部的学生，可能在工藤看来，主动追求年纪比自己小太多的女孩子并不符合他的作风。所以，年龄相仿又恰好分在同一个班的森山同学，就成了合适的追求目标。
+
 “说起来，雨宫你准备选长跑还是往复跑？”
 
 “……让我想想。”
@@ -80,6 +82,68 @@
 
 病还没有完全好的我，耐力只会比平常更差。如果是长跑的话，别说跑出一个不算难看的成绩了，能不能坚持到1500米跑完都是个问题。在心里决定了选项之后，我对工藤说道：
 
-“我大概会选往复跑吧。”
+“我大概会选往复跑吧，长跑我怕撑不下来。”
 
-“”
+听到我的决定，工藤伸出手想拍拍我的肩膀，但中途又缩了回去。
+
+“……加油。”
+
+“……谢谢啦。”
+
+我勉强挤出一个笑容，试图回应工藤的关心。
+
+&emsp;
+
+勉强完成了立定跳远和掷手球的我，在冷水机旁补充了一点水分之后，向50米跑的起跑线走去。在我的视野前方，刚刚完成测试的男生们一个个离开了终点线。
+
+我看向跑道两侧，那里站着不少女生。她们之中有的和我们一样穿着运动服，有的身着水手服，一看领结就知道是高年级的学姐；还有少数几个女生穿的是西服夹克——这些毫无疑问，是中等部的学妹们。
+
+除此之外还有一些看上去是田径部部员的学生，大概是来拉人的吧。
+
+站到起跑线上的我，做出蹲踞式起跑的姿势，闭上眼睛——不是想象自己跑步时应有的动作，而是开始再现某个场景。
+
+脑海之中，浮现出家的样子。随后，**那两个人**的面容也逐一浮现出来。他们的表情，就如同**寻常的父母**一般。
+
+——少在我面前装模作样了。
+
+随着一个冰冷的声音，他们的表情一下子变得冷漠，仿佛正在看着一个憎恨之极却又不得不一起生活的人——没错，那个人正是我。
+
+“各就各位——”
+
+——只要我消失的话，你们就自由了吧。
+
+我睁开了双眼。这样的心理暗示，对我已经足够了。
+
+“预备——”
+
+随着起跑的发令声，我猛然踏动地面，开始向前奔跑。
+
+身前并没有和我一起测试的同学们的身影。脑子中别说跑道两边的学生们了，连终点线都没有。
+
+当我终于停下来的时候，整个人已经冲出了跑道。我双膝跪地，用手撑住地面，大口呼吸着空气。
+
+“6、6.9秒！”
+
+站起身来的我听到了高处传来的成绩，而跑道两边的女生们的尖叫，则完全没有传到我耳边。
+
+当我沿着跑道回到终点线旁边时，工藤从一旁冲了过来。
+
+“雨宫你刚才那是怎么一回事？不是没什么体力的吗？这成绩未免也太吓人了吧？”
+
+“我想大概是瞬间的爆发力起了作用吧。”
+
+“如果你参加今年的运动会的话，我们班说不准能拿到不错的成绩呢！”
+
+“要跑哪个？长跑我跑不了，难不成是接力？”
+
+“接力的话你应该问题不大吧？毕竟每个人只用跑400米。”
+
+“可能得临时练一下，毕竟我未必能撑这么久。”
+
+没错，像刚才一样的爆发力用在100米的短跑上问题不大，200米勉强也可以，但恰好卡在我耐力极限上的400米可能就有点麻烦了。
+
+说到底，我并不是跑的很快。
+
+**我只是逃的很快罢了**。
+
+往返跑的测试还有一段时间才会开始。我一边坐下来休息，一边看着下一波走向起跑线的学生。
