--- a/vol1/01-12.md
+++ b/vol1/01-12.md
@@ -126,9 +126,84 @@
 
 “那我就没有意见了。”
 
-朝仓会长听到他的话，随后说道：
+朝仓会长也跟着说道：
 
 “那我就盖章同意了。时候不早，过会还要开本学年的第一次学级委员会，各位准备出发吧。”
 
 &emsp;
 
+从电梯下楼后，我们三人跟在学生会成员们的后面。这时我突然想起一件事，向走在最后的学生会长问道：
+
+“朝仓会长，请问学生会室里的那幅字是哪位学长留下的？”
+
+“是我父亲。另外，叫我‘学姐’就好。会长这个词太正式了。”
+
+“朝仓学姐的父亲当年也是学生会长吗？”
+
+听到渡边学姐的问题，朝仓学姐立刻回答：
+
+“很遗憾，高中三年期间，他只担任过副会长。这所学校成立第一年的学生会选举中，他输给了另一名学生，从此就一直很不甘心，这才希望我能够担任学生会长。”
+
+我的脑海中突然冒出了校长在入学式当天清晨讲过的内容——《黑衣学生会长》的传说。这让我产生了对答案试试的念头。
+
+“当时赢得选举的学生会长，就是传说中被称为《黑衣学生会长》的那位OG吗？”
+
+朝仓会长以清冽的声音回答：
+
+“没错。不过我也只是在照片上看过她的样子，并没有见过本人。”
+
+这时我们已经走到了大会议室的门前。我停下脚步回头望去，工藤和森山同学正从身后走来。他们的更后面，还有几个穿着立领学生服和灰色西装制服的中等部学生。
+
+个子和我差不多高的唯和另一个身材高挑，将长发梳成马尾辫的女生走在一起——那是柏原同学。她们发现了我的存在，想向我挥手问候，却被我一个眼神阻止了。
+
+“朝仓学姐，高等部和中等部的学级委员在一起开会吗？”
+
+“没错。文化祭和圣夜祭这样的大型活动都是高等部和中等部合并举办，所以需要在一起开会。不过除此之外两边基本都是分开的，高等部和中等部的学生会也不在一起办公。”
+
+“听起来有点不太方便啊。”
+
+“毕竟这所学校一开始的时候只有高中部嘛。好了，渡边同学和雨宫同学你们就先留在外面吧。”
+
+黑泽学姐等学级委员们已经进了会议室。正当朝仓学姐也准备带领学生会的成员们进去的时候，突然间她停下了脚步，随后转头走了几步，才拿出手机——看样子有人给她打来了电话。
+
+“嗯，我是しずく。……是爸爸吗？……好的。我明白了。现在马上过去。”
+
+通话结束了。朝仓学姐低下了头，右手像是在忍耐着什么一般紧紧握住手机。
+
+我仿佛可以看到，她紧闭着的双眼两侧有着透明的水珠。
+
+不知过了多久，朝仓学姐转过身来对入江副会长说道：
+
+“我有急事要赶回去。学级委员会这边就拜托你了。”
+
+“会长，是不是发生了什么……”
+
+也许是鬼迷心窍吧，我不合时宜地插嘴说道：
+
+“大概朝仓学姐的至亲遭遇了重大的不幸，才会需要她立刻过去。”
+
+不仅朝仓学姐和入江副会长，学生会的其他人和渡边学姐也露出了惊讶的表情。
+
+片刻后，入江副会长尽可能平静地说道：
+
+“那这边就交给我们吧。”
+
+“嗯，麻烦你了。”
+
+朝仓学姐说完就离开了，入江副会长则带着学生会的其他人进了会议室，外面只剩下了我和渡边学姐。
+
+“雨宫同学，你是怎么看出来的？”
+
+面对渡边学姐的问题，我想了一下回答：
+
+“如果是别人问我这个问题，我会说这是直觉。但其实这是骗人的。”
+
+“那又是怎么回事？”
+
+“我是在上周日中午的那次聚餐上听说的——那些女人提到过一个姓朝仓的学长。如果我的猜测没错，他应该就是朝仓学姐的父亲。”
+
+“然后呢？”
+
+“当时她们是这样说的——朝仓学姐的母亲‘病的很重，似乎也就在这几天了’。”
+
+沉重的空气，在会议室外盘桓不去。
