--- a/vol1/01-09.md
+++ b/vol1/01-09.md
@@ -16,11 +16,11 @@
 
 女人们叽叽喳喳的声音传到了我的耳边。
 
-“说起来朝仓学长最近似乎很忙呢。”
+“说起来Asakura学长最近似乎很忙呢。”
 
 “没记错的话，他夫人病的很重，似乎也就在这几天了。”
 
-“说的是遥学姐吗？我记得上学的时候就听说她身体不太好来着。”
+“说的是Haruka学姐吗？我记得上学的时候就听说她身体不太好来着。”
 
 “<ruby><rb>隆子</rb><rt>Takako</rt></ruby>你没听说什么消息吗？”
 
