--- a/vol1/01-12.md
+++ b/vol1/01-12.md
@@ -207,3 +207,9 @@
 “当时她们是这样说的——朝仓学姐的母亲‘病的很重，似乎也就在这几天了’。”
 
 沉重的空气，在会议室外盘桓不去。
+
+&emsp;
+
+朝仓遥香女士——这个名字是我后来知道的——大概的确已经死了。
+
+而此时此刻的我，也只不过将这当成日常生活中随处可见的一个事件而已。
