--- a/vol1/01-12.md
+++ b/vol1/01-12.md
@@ -210,6 +210,6 @@
 
 &emsp;
 
-朝仓遥香女士——这个名字是我后来知道的——大概的确已经死了。
+<ruby><rb>朝仓</rb><rt>Asakura</rt></ruby><ruby><rb>遥香</rb><rt>Haruka</rt></ruby>女士——这个名字是我后来知道的——大概的确已经死了。
 
 而此时此刻的我，也只不过将这当成日常生活中随处可见的一个事件而已。
