--- a/vol1/01-14.md
+++ b/vol1/01-14.md
@@ -156,3 +156,37 @@ III-3-d。
 
 &emsp;
 
+纸上得来终觉浅，绝知此事要躬行。
+
+《Contrapunctus XIV》的续写工作，一直停留在星期二夜间最终留下的那个四行表格中的数字上。
+
+第239节的断点后面，我连一个音符都没能写下。
+
+非要找借口的话也不是没有。毫无作曲经验的我，只能通过阅读分析其他创作者续写的乐谱，寻找它们在结构上的共通之处，减少自己犯错误的可能性。
+
+——开什么玩笑啊，你只是在逃避罢了。就像你逃避着你周围的人们一样。
+
+<ruby><rb>冰冷的声音</rb><rt>我的声音</rt></ruby>再一次响起。
+
+倒也没错。赋格这个词的含义不仅包括“追逐”，也包括了“逃避”。
+
+从入学式到现在已经过了快三个星期。这三个星期中，我只不过是利用自己过去<ruby><rb>观察他人获得的知识</rb><rt>扫描并剽窃来的知识</rt></ruby>，将自己包装成一个看上去很好相处的模范生罢了。
+
+面对班上同学的时候，以适当的方式把控距离，尽可能不让他们踏入自己的内心世界。
+
+在学校和班级的群组中，偶尔以适当的方式讲几句话，更多的时候则是干脆无视。
+
+那个女人在上星期一把我送到诊所之后就再也没联系过我。至于那个男人，我已经想不起他上一次和我讲话是什么时候，更记不起他说了什么。
+
+——真以为自己逃得开吗？
+
+——像你这种伪装，又能维持多久呢？
+
+学校中做出模范生样子的我。
+
+背负着沉重的家庭关系的我。
+
+以及在一边冷眼旁观，随时准备撕烂这一切的我。
+
+就宛如<ruby><rb>搜查官</rb><rt>Javert</rt></ruby>时刻想要撕下<ruby><rb>市长</rb><rt>Monsieur Madelaine</rt></ruby>的伪装，露出下面的那个<ruby><rb>苦役犯</rb><rt>Jean Valjean</rt></ruby>一样。
+
