--- a/vol1/01-14.md
+++ b/vol1/01-14.md
@@ -176,17 +176,82 @@ III-3-d。
 
 在学校和班级的群组中，偶尔以适当的方式讲几句话，更多的时候则是干脆无视。
 
-那个女人在上星期一把我送到诊所之后就再也没联系过我。至于那个男人，我已经想不起他上一次和我讲话是什么时候，更记不起他说了什么。
+而在家庭关系方面——那个女人在上星期一把我送到诊所之后就再也没联系过我。至于那个男人，我已经想不起他上一次和我讲话是什么时候，更记不起他说了什么。
 
 ——真以为自己逃得开吗？
 
 ——像你这种伪装，又能维持多久呢？
 
-学校中做出模范生样子的我。
+在学校中伪装成模范生的我。
 
 背负着沉重的家庭关系的我。
 
 以及在一边冷眼旁观，随时准备撕烂这一切的我。
 
-就宛如<ruby><rb>搜查官</rb><rt>Javert</rt></ruby>时刻想要撕下<ruby><rb>市长</rb><rt>Monsieur Madelaine</rt></ruby>的伪装，露出下面的那个<ruby><rb>苦役犯</rb><rt>Jean Valjean</rt></ruby>一样。
+就宛如<ruby><rb>搜查官</rb><rt>Javert</rt></ruby>时刻想要撕下<ruby><rb>市长</rb><rt>Monsieur Madelaine</rt></ruby>的伪装，露出下面的那个<ruby><rb>戴着绿色帽子的男人</rb><rt>Jean Valjean</rt></ruby>一样。
 
+——只要我死掉的话，大概就能彻底逃开这一切了吧。
+
+已经不是第一次在我的脑海中出现的这个想法，让我有点喘不过气。
+
+出门走走，转换下心情好了。
+
+我换上便服，穿过旧宿舍楼的正门，向通往电车站的天桥走去。
+
+&emsp;
+
+在<ruby><rb>中央广场</rb><rt>Zentrumplatz</rt></ruby>附近的家庭餐厅随便吃了份意大利面之后，我原本打算去时常光顾的书店转一圈消磨时间，但却在途中停下了脚步。
+
+阳光从这一季节少有的晴朗天空中射下，被某个东西反射而进入了我的眼睛。我被稍纵即逝的闪光晃了一下，下意识地转头望去，却看到了一个熟悉的身影。
+
+——不对吧？
+
+——今天不是星期天吗？
+
+——**她**难道不该是在学校里开组会吗？
+
+一个又一个疑问从意识的沼泽中涌现，化为虚无的泡泡消散在空气之中。
+
+然而，那张脸我绝不可能看错。的确是**那个女人**。
+
+刚才晃到我的闪光，是她左手上戴着的某件饰物——戒指反射产生的。这更让我感到不自然了——因为那个女人在我的记忆中从未戴过戒指。
+
+我的目光随着那个女人的脚步向后转去。她侧着头，似乎正与身旁的一个男性交谈着，完全没有注意到我的存在。
+
+我看不清背对着我的那个陌生男性的脸。能确认的事情只有一个——他并不是**那个男人**。
+
+这更加不合常理。那个男人和那个女人虽然平常从不互相沟通，但并不代表他们不会互相观察——更准确地说，他们一直都拿着看不见的放大镜，试图找出对方身上的瑕疵，从而占据道德上的制高点。
+
+但现在再纠结这些内容也已经没有用了。对我而言，重要的不是“那个陌生男人是谁”这一问题，而是——
+
+他们要去哪里？
+
+我跟在他们后面，尽可能利用身边走过的人隐藏自己的身形——由于我个子很矮，这一点并不难做到。两个人沿着我来时的路穿过中央广场，走进了一条窄路。
+
+窄路上人烟稀少，这让我不方便走在离他们太近的地方，而只能藏在建筑物的阴影中，远远地看着不知何时已然十指相扣的他们继续前进。
+
+突然，那个陌生男人向后看了一眼，差一点就发现了我。隐约中，我似乎能听到两人之间的对话。
+
+“总感觉有人跟着我们。”
+
+“是吗？”
+
+是那个女人若无其事的声音。她继续说道：
+
+“就算真有人跟着又怎么样？U有什么好怕的？”
+
+话音刚落，那个女人就加快了脚步。陌生男子随后也跟上了她的步伐，两人又走了几步，走进了一栋建筑物的正门。
+
+做出“现在就跟进去很可能会被抓个现行”的判断后，我留在原地，打开手机上的数独App，做完一个简单难度的数独题后，才从建筑物的阴影中走了出来。
+
+一分钟后，我站在了那两个人走进的建筑物的正门前。
+
+早在打开数独App的那一刻，我就已经得出了先前问题的解答。如今，只不过是最终确认而已。
+
+此处正是去年黄金周的时候，那个女大学生约我前来的地方。
+
+这时，我才发现自己的双脚被刺骨的寒冷侵袭着。
+
+不能再呆在这里了。书店也不必再去了。
+
+下定决心的我转过身，向中央广场上通向电车站的地下通道入口方向走去。
