--- a/vol1/01-14.md
+++ b/vol1/01-14.md
@@ -214,7 +214,7 @@ III-3-d。
 
 然而，那张脸我绝不可能看错。的确是**那个女人**。
 
-刚才晃到我的闪光，是她左手上戴着的某件饰物——戒指反射产生的。这更让我感到不自然了——因为那个女人在我的记忆中从未戴过戒指。
+刚才晃到我的闪光，是她左手上戴着的某件饰物——戒指反射产生的。这让我感到不太自然——在我的记忆中，那个女人从未戴过戒指。
 
 我的目光随着那个女人的脚步向后转去。她侧着头，似乎正与身旁的一个男性交谈着，完全没有注意到我的存在。
 
@@ -240,7 +240,7 @@ III-3-d。
 
 “就算真有人跟着又怎么样？U有什么好怕的？”
 
-话音刚落，那个女人就加快了脚步。陌生男子随后也跟上了她的步伐，两人又走了几步，走进了一栋建筑物的正门。
+话音刚落，那个女人就加快了脚步。被她称为U的陌生男子随后也跟上了她的步伐，两人又走了几步，走进了一栋建筑物的正门。
 
 做出“现在就跟进去很可能会被抓个现行”的判断后，我留在原地，打开手机上的数独App，做完一个简单难度的数独题后，才从建筑物的阴影中走了出来。
 
