--- a/vol1/01-10.md
+++ b/vol1/01-10.md
@@ -1,4 +1,4 @@
-## #10 Vizitante la Pacienton
+### #10 Vizitante la Pacienton
 
 正当百无聊赖的我在手机上交替翻阅着《Les Misérables》的法语版和翻译版进行对比阅读的时候，突然弹出了一条Linie消息的通知。
 
