--- a/vol1/01-13.md
+++ b/vol1/01-13.md
@@ -1,4 +1,4 @@
-## #13 La aŭtoro kiu miskomprenis «La Porte Étroite»
+### #13 La aŭtoro kiu miskomprenis «La Porte Étroite»
 
 “那么雨宫同学，你之前给我发消息，说对《La Fille du Livre》最后两卷有自己的看法。具体来说是怎么样呢？”
 
