--- a/vol1/01-15.md
+++ b/vol1/01-15.md
@@ -52,8 +52,23 @@
 
 已读的标记很快显示出来，但我过了快一分钟才接到学姐的消息：
 
-【snowsee: 那要不要我陪你一起出去？】
+【snowsee: 那要不要我陪你一起出去？就当是约会好了】
 
 看到她发来的消息，我也陷入了迟疑。
 
 别说约会了，我连和同年代女性一起外出的经验都没有——一年前和那位女大学生在情人旅馆中共度的那一下午并不能算数。
+
+所以我并不能判断，学姐的动机是否只是想让我的心情好一点。不过，拒绝他人的好意似乎也不太好。
+
+【MSK: 那也可以啊。明天什么时候在哪会合？】
+
+【snowsee: 上午9点，学校门口的电车站】
+
+【MSK: OK。那我先休息了。】
+
+【snowsee: 嗯，注意身体】
+
+虽然头疼的症状并没有先前那么严重，但如果一直持续到明天早上可就不太好了。我从床头抽屉中的药盒里翻出泰诺，就着水吃下一片之后，又盖上被子，等待着对乙酰氨基酚把我放倒的时刻到来。
+
+&emsp;
+
