--- a/vol1/01-15.md
+++ b/vol1/01-15.md
@@ -68,7 +68,41 @@
 
 【snowsee: 嗯，注意身体】
 
-虽然头疼的症状并没有先前那么严重，但如果一直持续到明天早上可就不太好了。我从床头抽屉中的药盒里翻出泰诺，就着水吃下一片之后，又盖上被子，等待着对乙酰氨基酚把我放倒的时刻到来。
+虽然头疼的症状并没有先前那么严重，但如果一直持续到明天早上可就不太好了。我定好闹钟，从床头抽屉中的药盒里翻出泰诺，就着水吃下一片之后，又盖上被子，等待着对乙酰氨基酚把我放倒的时刻到来。
 
 &emsp;
+
+设在早晨8点20分的闹钟准时叫醒了我。我用冷水洗了下脸，做了最低限度的面部护理之后，换上了蓝白条纹的毛线衫和牛仔裤。将运动鞋擦干净穿上之后，我背着双肩书包离开了宿舍。
+
+当我穿过电车站台上的闸机时，发现渡边学姐已经等在那里了。
+
+今天的学姐穿着一件米黄色的连衣裙，脚上穿着同色的低跟鞋，肩上则挎着一个淡蓝色的帆布手提袋。
+
+“雨宫同学到的还真是早呢。”
+
+“不好意思，让学姐久等了。”
+
+听到我的话，学姐微笑了一下：
+
+“没什么，我只是习惯提前到而已。和さやか她们一起外出的时候，往往等到过了约定时间好久她们才会来。”
+
+“毕竟是女孩子嘛……”
+
+我说到一半就住了口。在渡边学姐面前讲出我这种对异性的刻板印象只会让她困扰。为了转移话题，我看向学姐的手提包，上面用白色的线绣了几个英语单词。
+
+Pale Blue Dot。
+
+“知道这个词来自哪里吗？”
+
+“不太确定，但总感觉在哪里看过。”
+
+我掏出手机开始搜索。第一条搜索结果上面，有着“Voyager 1”的字样。
+
+旅行者一号。这让我意识到了什么。
+
+“说起来，我记得去年某个手机游戏似乎实装了以旅行者一号为原型的角色？”
+
+“雨宫同学你说的应该是F〇te/GO吧？我记得的确有。”
+
+“不过旅行者一号只是那个小男孩的原型之一。我记得另一个原型应该是——《Le Petit Prince》的主人公。”
 
