--- a/vol1/01-15.md
+++ b/vol1/01-15.md
@@ -106,3 +106,15 @@ Pale Blue Dot。
 
 “不过旅行者一号只是那个小男孩的原型之一。我记得另一个原型应该是——《Le Petit Prince》的主人公。”
 
+我轻咳了一下，继续说道：
+
+“渡边学姐觉得《Le Petit Prince》是个怎样的故事？”
+
+“我觉得——它是一个非常**美丽**的故事。”
+
+这时，电车在站台上减速停了下来。我们中断了对话，向车门的方向走去。
+
+&emsp;
+
+
+
