--- a/vol1/01-15.md
+++ b/vol1/01-15.md
@@ -116,5 +116,56 @@ Pale Blue Dot。
 
 &emsp;
 
+“说起来，雨宫同学的这双运动鞋款式我似乎没怎么见过呢。”
 
+“其实这双鞋是女式运动鞋。”
 
+“女式鞋？”
+
+渡边学姐露出了惊讶的表情，我则若无其事地继续说道：
+
+“包括这双在内，我之前穿的运动鞋基本都是我妈穿过一段时间之后丢给我的。”
+
+“你穿着的时候，就不会觉得不合脚吗？”
+
+“应该没有吧。”
+
+头顶的云彩遮住了多余的阳光，但又不至于过分阴沉。对我而言，这还算是个不错的天气。
+
+在<ruby><rb>火车站</rb><rt>Hauptbahnhof</rt></ruby>的地下走下电车后，我和渡边学姐正走在通向<ruby><rb>中央广场</rb><rt>Zentrumplatz</rt></ruby>的石块路面上。
+
+“渡边学姐，我们这是准备去哪？”
+
+我不想在运动鞋的问题上纠缠太久，于是向学姐询问这次外出的目的地。
+
+“我打算找个<ruby><rb>大型综合商场</rb><rt>Shopping Mall</rt></ruby>逛逛。名字好像是……Kronos？我记得不太清楚了。”
+
+“让我查查。”
+
+我看了一眼身旁的路牌，随即翻出手机，在地图上查询通向Kronos的路线。从我们所在的位置走过去大概要5分钟，而且需要穿过中央广场。
+
+“应该是从我们所在的Heinrich Straße穿过Zentrumplatz再走一小段路就到。不会超过10分钟。”
+
+“雨宫同学，刚才你看的那个路牌应该是……”
+
+“是德语。”
+
+“你会德语吗？”
+
+“不能说完全会，但是我能认出这个城市中以德语标出的地名。”
+
+“好厉害……我完全看不懂。”
+
+“其实我很多时候也只是用在线翻译把德语翻译成英语，再去理解这些词的意思。其他语言也是一样，我偶尔会下载一些版权进入公众领域的小说的原文版，然后再和翻译版对照着阅读，确保自己的理解没有出错。”
+
+我们就这样一边闲聊，一边走到了中央广场上。面对通向不同方向的道路，渡边学姐似乎有点分不清方向，她随便指了一条路对我问道：
+
+“是往那边走吗？”
+
+“那边是去Rathaus……哦不，市役所的路。这边才是通往Kronos的路。”
+
+“这样吗……抱歉，谢谢你。”
+
+“哪有的事。”
+
+我微笑了一下，确认视野前方的信号灯变成绿色后，和学姐一起走上了人行横道。
