--- a/vol1/01-15.md
+++ b/vol1/01-15.md
@@ -92,25 +92,25 @@
 
 Pale Blue Dot。
 
-“知道这个词来自哪里吗？”
+“雨宫同学知道这个词来自哪里吗？”
 
 “不太确定，但总感觉在哪里看过。”
 
-我掏出手机开始搜索。第一条搜索结果上面，有着“Voyager 1”的字样。
+听到学姐的问题，我掏出手机开始搜索。第一条搜索结果上面，有着“Voyager 1”的字样。
 
 旅行者一号。这让我意识到了什么。
 
 “说起来，我记得去年某个手机游戏似乎实装了以旅行者一号为原型的角色？”
 
-“雨宫同学你说的应该是F〇te/GO吧？我记得的确有。”
+“你说的应该是F〇te/GO吧？我记得的确有。不过，旅行者一号只是那个小男孩的原型之一。另一个原型应该是——《Le Petit Prince》的主人公。”
 
-“不过旅行者一号只是那个小男孩的原型之一。我记得另一个原型应该是——《Le Petit Prince》的主人公。”
-
-我轻咳了一下，继续说道：
+我轻咳了一下，向学姐问道：
 
 “渡边学姐觉得《Le Petit Prince》是个怎样的故事？”
 
 “我觉得——它是一个非常**美丽**的故事。”
+
+学姐露出了若有所思的表情。然而，尽管我在阅读《Le Petit Prince》的时候也能感觉到其中的魅力之处，却猜不出学姐此刻的内心想法。
 
 这时，电车在站台上减速停了下来。我们中断了对话，向车门的方向走去。
 
@@ -152,11 +152,15 @@ Pale Blue Dot。
 
 “你会德语吗？”
 
+看到渡边学姐一脸好奇的样子，我赶忙回答：
+
 “不能说完全会，但是我能认出这个城市中以德语标出的地名。”
 
 “好厉害……我完全看不懂。”
 
 “其实我很多时候也只是用在线翻译把德语翻译成英语，再去理解这些词的意思。其他语言也是一样，我偶尔会下载一些版权进入公众领域的小说的原文版，然后再和翻译版对照着阅读，确保自己的理解没有出错。”
+
+不管怎么说，这只是我的阅读习惯而已，并不是什么很值得夸耀的事。
 
 我们就这样一边闲聊，一边走到了中央广场上。面对通向不同方向的道路，渡边学姐似乎有点分不清方向，她随便指了一条路对我问道：
 
@@ -168,4 +172,4 @@ Pale Blue Dot。
 
 “哪有的事。”
 
-我微笑了一下，确认视野前方的信号灯变成绿色后，和学姐一起走上了人行横道。
+我向学姐微笑了一下，确认视野前方的信号灯变成绿色后，和她并肩走上了人行横道。
